Escaping some german special chars to unicode
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@1133 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/silverpeas/communicationUser/multilang/communicationUserBundle_de.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/communicationUser/multilang/communicationUserBundle_de.properties
@@ -28,17 +28,17 @@ seconds = Sekunden
 #CBO : REMOVE connectedUsers = Angeschlossene Benutzer
 #CBO : REMOVE authorMessage = Meldung
 user = Benutzer
-#CBO : REMOVE receiver = Empfänger
+#CBO : REMOVE receiver = Empf\u00E4nger
 #CBO : REMOVE close = Schliessen
 #CBO : REMOVE send = Senden
 language = Sprache
 
 #CBO : ADD
-clear = Löschen
-save = Gespräch speichern
+clear = L\u00F6schen
+save = Gespr\u00E4ch speichern
 logout = Beenden
-exportDiscussion = Gespräch vom
-currentDiscussion = Gespräch
+exportDiscussion = Gespr\u00E4ch vom
+currentDiscussion = Gespr\u00E4ch
 messageTooLong = Die Mitteilung darf maximal
 nbMaxTextArea = 1240
 characters = Ziffern lang sein
