--- a/config-core/src/main/config/properties/com/silverpeas/form/multilang/formBundle_de.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/form/multilang/formBundle_de.properties
@@ -23,14 +23,14 @@
 #
 
 //erreurs
-ContainsTooLargeText = darf nicht übersteigen 
+ContainsTooLargeText = darf nicht \u00FCbersteigen
 Characters = Zeichen
 
-userPanel = Einen Benutzer wählen
+userPanel = Einen Benutzer w\u00E4hlen
 clearUser = Feld reinitialisieren
 
-removeFile = Datei löschen
-removeImage = Bild löschen
+removeFile = Datei l\u00F6schen
+removeImage = Bild l\u00F6schen
 
 // filtres
 eq =
@@ -38,7 +38,7 @@ le = (vor dem)
 ge = (nach dem)
 
 //Wysiwyg
-FormattingToolbar = Die Symbolleiste ist nur im Normal-Modus zugänglich 
+FormattingToolbar = Die Symbolleiste ist nur im Normal-Modus zug\u00E4nglich
 FormatText = Text in welcher Schriftart formatiert? 
 FormatColor = Text in welcher Farbe formatiert? 
 Paragraph = Abschnitt
@@ -50,46 +50,46 @@ Heading4 = Titel 4 <H4>
 Heading5 = Titel 5 <H5>
 Heading6 = Titel 6 <H6>
 Pre = Formatiert <PRE>
-ClearFormatting = Formatierung löschen 
+ClearFormatting = Formatierung l\u00F6schen
 Font = Schrift
 Other = Andere
-Size = Grösse
+Size = Gr\u00F6sse
 Color = Farbe
 WYSIWYG = Normal-Modus
 HTML = HTML-Modus 
-RemoveHtmlTags = Folgende HTML-Tags löschen und bestätigen: 
+RemoveHtmlTags = Folgende HTML-Tags l\u00F6schen und best\u00E4tigen:
 RememberHtml = Im HTML-Modus darauf achten, zu ersetzen  
 Brackets = die Tags < und > durch &lt; und &gt; 
 Bold = Fett
 Italic = Kursiv
 Underline = Unterstrichen
-LeftJustify = Linksbündig
+LeftJustify = Linksb\u00FCndig
 CenterJustify = Zentriert
-RightJustify = Rechtsbündig
+RightJustify = Rechtsb\u00FCndig
 OrderedList = Nummerierung
-UnorderedList = Aufzählungszeichen
+UnorderedList = Aufz\u00E4hlungszeichen
 RemoveIndent = Einzug verkleinern
-Indent = Einzug vergrössern
+Indent = Einzug vergr\u00F6ssern
 Hyperlink = Hypertext-Link
 LienURL = Ein Link zu einem URL muss hier angegeben werden 
 URL = URL 
-PageTropGrosse = Fehler, das WYSIWYG-Feld enthält zu viele Zeichen, um gesichert werden zu können. 
-ErreurScript = Fehler, Ihr HTML-Code enthält Scripts. Nur statische Seiten (ohne Script) sind zulässig.
+PageTropGrosse = Fehler, das WYSIWYG-Feld enth\u00E4lt zu viele Zeichen, um gesichert werden zu k\u00F6nnen.
+ErreurScript = Fehler, Ihr HTML-Code enth\u00E4lt Scripts. Nur statische Seiten (ohne Script) sind zul\u00E4ssig.
 Script = darf keine Scrips enthalten.
 Black = Schwarz
 Brown = Rotbraun
-DarkGreen = Dunkelgrün
-Green = Grün
-Olive = Olivengrün
+DarkGreen = Dunkelgr\u00FCn
+Green = Gr\u00FCn
+Olive = Olivengr\u00FCn
 Navy = Dunkelblau
 Purple = Purpurrot
 Gray = Grau
 Silver = Silbergrau
 Red = Rot
 DarkRed = Dunkelrot
-FluoGreen = Fluo-Grün
+FluoGreen = Fluo-Gr\u00FCn
 Yellow = Gelb
 Blue = Blau
 Fuchsia = Pink
-Turquoise = Türkis
+Turquoise = T\u00FCrkis
 White = Weiss
