--- a/config-core/src/main/config/properties/com/silverpeas/importExport/multilang/importExportBundle_de.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/importExport/multilang/importExportBundle_de.properties
@@ -24,5 +24,5 @@
 
 importExport.document = Dokument
 importExport.documents = Dokumente
-importExport.empty = Dieses Thema enthält keine Publikationen
+importExport.empty = Dieses Thema enth\u00E4lt keine Publikationen
 importExport.index = Zusammenfassung von
