--- a/config-core/src/main/config/properties/com/silverpeas/interestCenterPeas/multilang/interestCenterBundle_de.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/interestCenterPeas/multilang/interestCenterBundle_de.properties
@@ -27,7 +27,7 @@ RequestName = Name der Anforderung
 EmtyICName = Geben Sie bitte den Namen der Anforderung ein
 NameExists = Dieser Name wird bereits verwendet. Wollen Sie weiterfahren?
 AddICenter = Erstellen einer Anforderung
-EditICenter = Ändern
-DeleteICenter = Löschen
+EditICenter = \u00C4ndern
+DeleteICenter = L\u00F6schen
 Path = Meine bevorzugten Anforderungen
 Operations = Operationen
