--- a/config-core/src/main/config/properties/com/silverpeas/jobManagerPeas/multilang/jobManagerPeasBundle_de.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobManagerPeas/multilang/jobManagerPeasBundle_de.properties
@@ -22,7 +22,7 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 
-JMP.backSilverpeas = Zurück zu Silverpeas
+JMP.backSilverpeas = Zur\u00FCck zu Silverpeas
 
 JMP.exit = Verlassen
 
@@ -62,6 +62,6 @@ JRIFBP = FileBox+ Directory Import
 
 JMAP = Wartung
 JMAP.header1 = Gesamtverwaltung des Wartungs-Modus
-JMAP.maintenanceOnAir = Die Anwendung befindet gegenwärtig im Wartungs-Modus....
+JMAP.maintenanceOnAir = Die Anwendung befindet gegenw\u00E4rtig im Wartungs-Modus....
 JMAP.active = Aktivieren
 JMAP.desactive = Deaktivieren
