--- a/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_de.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_de.properties
@@ -36,8 +36,8 @@ templateDesigner.file = Datei
 templateDesigner.fields = Formular-Felder
 templateDesigner.field = Formular-Feld
 
-templateDesigner.size = Grösse des Feldes
-templateDesigner.maxLength = Maximale Grösse des Textes
+templateDesigner.size = Gr\u00F6sse des Feldes
+templateDesigner.maxLength = Maximale Gr\u00F6sse des Textes
 templateDesigner.rows = Anzahl Zeilen
 templateDesigner.cols = Anzahl Spalten
 templateDesigner.default = Standardwert
@@ -49,37 +49,37 @@ templateDesigner.password = LDAP Passwort-Authentifizierung
 templateDesigner.searchBase = LDAP Anfrage
 templateDesigner.searchScope = Tiefe der LDAP Anfrage
 templateDesigner.searchFilter = Suchfilter
-templateDesigner.searchAttribute = Name des zurückgegeben Attributs
-templateDesigner.searchTypeOnly = Gibt nur die Namen der Attribute zurück (true / false)
-templateDesigner.maxResultDisplayed  = Maximale Anzahl von zurückgegebenen Suchergebnisse
-templateDesigner.valueFieldType = Beschränktes Feld (1) oder freie Suche (2)
+templateDesigner.searchAttribute = Name des zur\u00FCckgegeben Attributs
+templateDesigner.searchTypeOnly = Gibt nur die Namen der Attribute zur\u00FCck (true / false)
+templateDesigner.maxResultDisplayed  = Maximale Anzahl von zur\u00FCckgegebenen Suchergebnisse
+templateDesigner.valueFieldType = Beschr\u00E4nktes Feld (1) oder freie Suche (2)
 templateDesigner.driverName = Name der JDBC-Treiberklasse
 templateDesigner.url = Verbindungs URL
-templateDesigner.login = Login für die Verbindung zur Datenbank
-templateDesigner.passwordDB = Passwort für die Verbindung zur Datenbank
+templateDesigner.login = Login f\u00FCr die Verbindung zur Datenbank
+templateDesigner.passwordDB = Passwort f\u00FCr die Verbindung zur Datenbank
 templateDesigner.query = SQL-Abfrage
 
-templateDesigner.addOption = Diese Option hinzufügen
-templateDesigner.updateOption = Diese Option ändern
-templateDesigner.deleteOption = Diese Option löschen
+templateDesigner.addOption = Diese Option hinzuf\u00FCgen
+templateDesigner.updateOption = Diese Option \u00E4ndern
+templateDesigner.deleteOption = Diese Option l\u00F6schen
 templateDesigner.defaultOption = Diese Option als Standardwert festlegen
 templateDesigner.optionText = Text
-templateDesigner.optionValue = Schlüssel
+templateDesigner.optionValue = Schl\u00FCssel
 
-templateDesigner.newFieldText = Ein 'Text'-Feld hinzufügen
-templateDesigner.newFieldTextarea = Ein 'Mehrzeilentext'-Feld hinzufügen
-templateDesigner.newFieldWysiwyg = Ein 'WYSIWYG'-Feld hinzufügen
-templateDesigner.newFieldList = Ein 'Scroll-Listen'-Feld hinzufügen
-templateDesigner.newFieldCheckbox = Ein 'Kontrollkästchen' hinzufügen
-templateDesigner.newFieldRadio = Eine 'Optionsschaltfläche' hinzufügen
-templateDesigner.newFieldURL = Ein 'URL'-Feld hinzufügen
-templateDesigner.newFieldDate = Ein 'Datum'-Feld hinzufügen
-templateDesigner.newFieldFile = Ein 'Datei'-Feld hinzufügen
-templateDesigner.newFieldImage = Ein 'Bild'-Feld hinzufügen
-templateDesigner.newFieldUser = Ein 'Benutzer'-Feld hinzufügen
-templateDesigner.newFieldLdap = Ein Feld 'LDAP-Connector' hinzufügen
-templateDesigner.newFieldAccessPath = Ein Feld 'Standort' hinzufügen
-templateDesigner.newFieldJdbc = Ein Feld 'JDBC Connector' hinzufügen
+templateDesigner.newFieldText = Ein 'Text'-Feld hinzuf\u00FCgen
+templateDesigner.newFieldTextarea = Ein 'Mehrzeilentext'-Feld hinzuf\u00FCgen
+templateDesigner.newFieldWysiwyg = Ein 'WYSIWYG'-Feld hinzuf\u00FCgen
+templateDesigner.newFieldList = Ein 'Scroll-Listen'-Feld hinzuf\u00FCgen
+templateDesigner.newFieldCheckbox = Ein 'Kontrollk\u00E4stchen' hinzuf\u00FCgen
+templateDesigner.newFieldRadio = Eine 'Optionsschaltfl\u00E4che' hinzuf\u00FCgen
+templateDesigner.newFieldURL = Ein 'URL'-Feld hinzuf\u00FCgen
+templateDesigner.newFieldDate = Ein 'Datum'-Feld hinzuf\u00FCgen
+templateDesigner.newFieldFile = Ein 'Datei'-Feld hinzuf\u00FCgen
+templateDesigner.newFieldImage = Ein 'Bild'-Feld hinzuf\u00FCgen
+templateDesigner.newFieldUser = Ein 'Benutzer'-Feld hinzuf\u00FCgen
+templateDesigner.newFieldLdap = Ein Feld 'LDAP-Connector' hinzuf\u00FCgen
+templateDesigner.newFieldAccessPath = Ein Feld 'Standort' hinzuf\u00FCgen
+templateDesigner.newFieldJdbc = Ein Feld 'JDBC Connector' hinzuf\u00FCgen
 
 templateDesigner.displayer = Anzeiger
 templateDesigner.operations = Operationen
@@ -88,4 +88,4 @@ templateDesigner.down = Nach unten
 
 
 templateDesigner.operations = Operationen
-templateDesigner.available = Verfügbar
+templateDesigner.available = Verf\u00FCgbar
