--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/genericPanel/multilang/genericPanelBundle_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/genericPanel/multilang/genericPanelBundle_de.properties
@@ -25,20 +25,20 @@
 
 genericPanel.usersList          = Liste der Benutzer
 genericPanel.fournisseursList   = Liste der Lieferanten
-genericPanel.acheteursList      = Liste der Käufer
+genericPanel.acheteursList      = Liste der K\u00E4ufer
 genericPanel.adminList          = Liste der Administratoren
 genericPanel.genericList        = Liste der generischen Benutzer
 genericPanel.infoList           = Liste der Informatiker
 
 genericPanel.allUsers        = Alle Benutzer
 genericPanel.fournisseurs    = Lieferanten
-genericPanel.acheteurs       = Käufer
+genericPanel.acheteurs       = K\u00E4ufer
 genericPanel.admin           = Administratoren
 genericPanel.genericUsers    = Generische Benutzer
 genericPanel.informatique    = Informatiker
 
-genericPanel.arttitle        = Verfügbar
-genericPanel.artfouList      = Auswahl der hinzuzufügenden Artikel
+genericPanel.arttitle        = Verf\u00FCgbar
+genericPanel.artfouList      = Auswahl der hinzuzuf\u00FCgenden Artikel
 genericPanel.fouCode         = Lieferanten-Code
 genericPanel.reference       = Lieferanten-Referenz
 genericPanel.artid           = Gerenrische Referenz
