--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/genericPanelPeas/multilang/genericPanelPeasBundle_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/genericPanelPeas/multilang/genericPanelPeasBundle_de.properties
@@ -26,11 +26,11 @@
 genericPanelPeas.usersList       = Benutzer
 genericPanelPeas.searchResult    = Ergebniss
 genericPanelPeas.searchCriteres  = Suchkriterien
-genericPanelPeas.selectedNumber  = Gewählte Elemente
+genericPanelPeas.selectedNumber  = Gew\u00E4hlte Elemente
 
 genericPanelPeas.allUsers        = Alle Benutzer
 genericPanelPeas.fournisseurs    = Lieferanten
-genericPanelPeas.acheteurs       = Käufer
+genericPanelPeas.acheteurs       = K\u00E4ufer
 genericPanelPeas.admin           = Administratoren
 genericPanelPeas.genericUsers    = Generische Benutzer
 genericPanelPeas.quickSelect = Schnellwahl
