--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationManager/multilang/notificationManagerBundle_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationManager/multilang/notificationManagerBundle_de.properties
@@ -32,22 +32,22 @@ channelType1=E-Mail
 channelType2=SMS
 channelType3=Fenster
 channelType4=SilverMail
-channelType5=Unterdrückung
+channelType5=Unterdr\u00FCckung
 
 defaultAddressPOPUP=<Anzeige eines Fensters>
 defaultAddressSILVERMAIL=<Benachrichtigungs-Box>
-defaultAddressREMOVE=<Automatische Unterdrückung>
+defaultAddressREMOVE=<Automatische Unterdr\u00FCckung>
 defaultAddressSPMAIL=<Standard-E-Mail>
 defaultAddressSERVER=<Server>
 
 addressUsePro=Professionell
-addressUsePerso=Persönlich
+addressUsePerso=Pers\u00F6nlich
 addressUseRep=Anrufbeantworter
 addressUseUrgent=Dringlichkeit
 
 messagePriority0=Normal
 messagePriority1=Dringend
-messagePriority2=Funktionsstörung
+messagePriority2=Funktionsst\u00F6rung
 
 subject=Gegenstand
 From=Von
@@ -56,6 +56,6 @@ testMsgTitle=Benachrichtigungs-Testmeldung
 testMsgBody=Dies ist der Hauptteil der Meldung...
 testMsgFrom=silverpeas@silverpeas.com
 
-guestNotAllowedTitle=Benachrichtigung unmöglich!
-guestNotAllowedBody1=Senden der Benachrichtigung unmöglich: 
-guestNotAllowedBody2=Leider können Sie als Eingeladene(r) keine Benachrichtigunhg senden.
+guestNotAllowedTitle=Benachrichtigung unm\u00F6glich!
+guestNotAllowedBody1=Senden der Benachrichtigung unm\u00F6glich:
+guestNotAllowedBody2=Leider k\u00F6nnen Sie als Eingeladene(r) keine Benachrichtigunhg senden.
