--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationUser/multilang/notificationUserBundle_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationUser/multilang/notificationUserBundle_de.properties
@@ -27,25 +27,25 @@
 #
 
 fixColWidth = Spaltenbreite festlegen
-addAColumn = Eine Spalte hinzufügen
+addAColumn = Eine Spalte hinzuf\u00FCgen
 saveChanges = Speichern
-revert = Zurück zur vorhergehenden Version
+revert = Zur\u00FCck zur vorhergehenden Version
 
 title = Titel
 method = Mittel
 notif_type = Benachrichtigungsart
-users_dest = Empfänger (Benutzer)
-groups_dest = Empfänger (Gruppen)
-users_avail = Verfügbare Benutzer
-groups_avail = Verfügbare Gruppen
-selected = Gewählte
+users_dest = Empf\u00E4nger (Benutzer)
+groups_dest = Empf\u00E4nger (Gruppen)
+users_avail = Verf\u00FCgbare Benutzer
+groups_avail = Verf\u00FCgbare Gruppen
+selected = Gew\u00E4hlte
 
-Opane_addressees = Empfänger zuweisen
+Opane_addressees = Empf\u00E4nger zuweisen
 
-BBar_addressees = Empfänger
+BBar_addressees = Empf\u00E4nger
 
 missingFieldStart = Das Feld '
-missingFieldEnd = ' muss ausgefüllt werden
+missingFieldEnd = ' muss ausgef\u00FCllt werden
 
 manualNotification = Manuelle Benachrichtigung
 name = Gegenstand
@@ -61,7 +61,7 @@ description = Meldung
 method = Mittel
 importance = Wichtigkeit
 users = Benutzer
-addressees = Empfänger
+addressees = Empf\u00E4nger
 assigner = Zuweisen
 
 domainName = Benachrichtigen
@@ -74,9 +74,9 @@ LireNotification = Benachrichtigungs-Box
 Notifier = Senden einer Benachrichtigung
 
 //------------------------------------------------------------------------------------//
-//                  A mettre à jour dans le multilang general                         //
+//                  A mettre \u00E0 jour dans le multilang general                         //
 //------------------------------------------------------------------------------------//
-Select = Wählen Sie
+Select = W\u00E4hlen Sie
 Validate = OK
 Cancel = Abbrechen
 Close = Schliessen
