--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationserver/channel/silvermail/multilang/silvermail_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationserver/channel/silvermail/multilang/silvermail_de.properties
@@ -22,7 +22,7 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 
-ConfirmDeleteMessage = Wollen Sie diese Benachrichtigung löschen??
+ConfirmDeleteMessage = Wollen Sie diese Benachrichtigung l\u00F6schen??
 silverMail = Meine Benachrichtigungen
 onglet_inbox = Empfangs-Box
 bbar1_path = Meine Benachrichigungen
@@ -36,7 +36,7 @@ from = Von
 title = Titel
 name = Gegenstand
 operation = Operation
-delete = Löschen
+delete = L\u00F6schen
 author = Autor
 description = Meldung
 subject = Gegenstand
@@ -46,5 +46,5 @@ close = Schliessen
 ParametrerNotification = Parametrisierung
 LireNotification = Benachrichtigungs-Box
 Notifier = Senden einer Benachrichtigung
-DeleteAllNotif = Alle empfangenen Benachrichtigungen löschen
-ConfirmDeleteAllNotif = Sind Sie sicher, alle empfangenen Benachrichtigungen löschen zu wollen?
+DeleteAllNotif = Alle empfangenen Benachrichtigungen l\u00F6schen
+ConfirmDeleteAllNotif = Sind Sie sicher, alle empfangenen Benachrichtigungen l\u00F6schen zu wollen?
