--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_de.properties
@@ -30,9 +30,9 @@ pdcPeas.createAxis                     = Eine Achse erstellen
 pdcPeas.viewAxis                       = Die Achse sehen
 pdcPeas.editAxis                       = Die Achse bearbeiten
 pdcPeas.editValue                      = Den Wert bearbeiten
-pdcPeas.updateValue                    = Den Wert ändern
+pdcPeas.updateValue                    = Den Wert \u00E4ndern
 pdcPeas.moveValue                      = Den Wert verschieben
-pdcPeas.editRights                     = Dire REchte verwalten
+pdcPeas.editRights                     = Dire Rechte verwalten
 pdcPeas.noRight 		       	 	   = Sie haben keine Rechte auf dieser Achse.
 
 pdcPeas.value                          = Wert
@@ -46,35 +46,35 @@ pdcPeas.sistersValue                   = Werte s&#156;urs
 pdcPeas.allAxis                        = Alle Achsen
 pdcPeas.brothersAxis                   = Bruderachse
 
-pdcPeas.deleteAxis                     = Die gewählten Achsen löschen
-pdcPeas.deleteValue                    = Den Wert löschen
-pdcPeas.deleteValueImpossibleBegin     = Der Wert kann nicht gelöscht werden, da der Schwesterwert
-pdcPeas.deleteValueImpossibleEnd       = denselben Namen trägt wie einer der Tochterwerte
-pdcPeas.deleteArbo                     = Den Pfad löschen
+pdcPeas.deleteAxis                     = Die gew\u00E4hlten Achsen l\u00F6schen
+pdcPeas.deleteValue                    = Den Wert l\u00F6schen
+pdcPeas.deleteValueImpossibleBegin     = Der Wert kann nicht gel\u00F6scht werden, da der Schwesterwert
+pdcPeas.deleteValueImpossibleEnd       = denselben Namen tr\u00E4gt wie einer der Tochterwerte
+pdcPeas.deleteArbo                     = Den Pfad l\u00F6schen
 
-pdcPeas.confirmDeleteArbo              = Sind Sie sicher, den Pfad löschen zu wollen?
-pdcPeas.confirmDeleteValue             = Sind Sie sicher, den Wert löschen zu wollen?
-pdcPeas.confirmDeleteAxis              = Sind Sie sicher, Ihre Auswahl löschen zu wollen?
-pdcPeas.confirmMoveValue			   = Sind Sie sicher diesen Wert und alles was er enthält verschieben zu wollen ?
+pdcPeas.confirmDeleteArbo              = Sind Sie sicher, den Pfad l\u00F6schen zu wollen?
+pdcPeas.confirmDeleteValue             = Sind Sie sicher, den Wert l\u00F6schen zu wollen?
+pdcPeas.confirmDeleteAxis              = Sind Sie sicher, Ihre Auswahl l\u00F6schen zu wollen?
+pdcPeas.confirmMoveValue			   = Sind Sie sicher diesen Wert und alles was er enth\u00E4lt verschieben zu wollen ?
 
-pdcPeas.confirmDeleteAllManagers	   = Sind Sie sicher alle Administratoren löschen zu wollen ?
-pdcPeas.deleteAllManagers			   = Alle Administratoren löschen
-pdcPeas.updateManagers				   = Liste der Administratoren ändern
+pdcPeas.confirmDeleteAllManagers	   = Sind Sie sicher alle Administratoren l\u00F6schen zu wollen ?
+pdcPeas.deleteAllManagers			   = Alle Administratoren l\u00F6schen
+pdcPeas.updateManagers				   = Liste der Administratoren \u00E4ndern
 pdcPeas.managers					   = Administratoren
 pdcPeas.managersInherited			   = Ererbte Administratoren
 
 pdcPeas.createDaughterValue            = Einen Tochterwert erstellen
-pdcPeas.insertMotherValue              = Einen Mutterwert einfügen
+pdcPeas.insertMotherValue              = Einen Mutterwert einf\u00FCgen
 
 pdcPeas.axisUse                        = Die Achse verwenden
 pdcPeas.axisUtilizationParameter       = Die Verwendung der Achse parametrisieren
 pdcPeas.axisUse2                       = Verwendung der Achse
 pdcPeas.axisName                       = Name der Achse
 pdcPeas.axisOperation                  = Operation
-pdcPeas.primary                        = Primär
-pdcPeas.primaryAxis                    = Primärachsen
-pdcPeas.secondary                      = Sekundär
-pdcPeas.secondaryAxis                  = Sekundärachsen
+pdcPeas.primary                        = Prim\u00E4r
+pdcPeas.primaryAxis                    = Prim\u00E4rachsen
+pdcPeas.secondary                      = Sekund\u00E4r
+pdcPeas.secondaryAxis                  = Sekund\u00E4rachsen
 pdcPeas.activateThesaurus              = Den Thesaurus aktivieren
 pdcPeas.desactivateThesaurus           = Den Thesaurus deaktivieren
 pdcPeas.showSecondaryAxis			   = Sekondare Achsen zeigen
@@ -82,11 +82,11 @@ pdcPeas.hideSecondaryAxis			   = Sekondare Achsen Verstecken
 
 pdcPeas.classifyPublication            = Klassifizierung
 pdcPeas.classifyAdd                    = Erstellen einer neuen Position
-pdcPeas.classifyUpdate                 = Ändern eine Position
-pdcPeas.classifyDelete                 = Die gewählten Positionen löschen
+pdcPeas.classifyUpdate                 = \u00C4ndern eine Position
+pdcPeas.classifyDelete                 = Die gew\u00E4hlten Positionen l\u00F6schen
 pdcPeas.position                       = Position
 pdcPeas.noPosition                     = Keine Position
-pdcPeas.rootValueNotAllowed	       = Der Stammwert ist für die folgenden Achsen nicht gestattet
+pdcPeas.rootValueNotAllowed	       = Der Stammwert ist f\u00FCr die folgenden Achsen nicht gestattet
 
 pdcPeas.path                           = Pfad
 pdcPeas.variant                        = Variante
@@ -104,21 +104,21 @@ pdcPeas.emptyDaughterName              = Das Feld ' Tochterwert ' ist obligatori
 pdcPeas.emptyName                      = Das Feld ' Name ' ist obligatorisch
 
 pdcPeas.paramPdcPeas                   = Die Verwendung parametrisieren
-pdcPeas.paramChooseAxis                = Eine Klassierungsachse wählen
-pdcPeas.errorMessage                   = Ein zum gewählten Wert aufsteigender oder absteigender Wert ist bereits als Basiswert gewählt worden
-pdcPeas.positionExist                  = Sie können Ihren Basiswert nicht ändern.
+pdcPeas.paramChooseAxis                = Eine Klassierungsachse w\u00E4hlen
+pdcPeas.errorMessage                   = Ein zum gew\u00E4hlten Wert aufsteigender oder absteigender Wert ist bereits als Basiswert gew\u00E4hlt worden
+pdcPeas.positionExist                  = Sie k\u00F6nnen Ihren Basiswert nicht \u00E4ndern.
 pdcPeas.paramUsedAxis		       = Parametrisierung
 pdcPeas.Errors                         = Fehler
 pdcPeas.mySearchContext                = Meine Suche
-pdcPeas.modifySearchContext            = Suche ändern
+pdcPeas.modifySearchContext            = Suche \u00E4ndern
 pdcPeas.searchResult                   = Die Ergebnisse der Suche anzeigen
-pdcPeas.addSearchContext               = Diese Achse zum Suchkontext hinzufügen
-pdcPeas.supprAxisFromContext           = Die im Suchkontext gewählten Achsen löschen
+pdcPeas.addSearchContext               = Diese Achse zum Suchkontext hinzuf\u00FCgen
+pdcPeas.supprAxisFromContext           = Die im Suchkontext gew\u00E4hlten Achsen l\u00F6schen
 pdcPeas.documentConsult                = das Dokument abfragen
 
 //recherche
-pdcPeas.requestSelect = Die Anforderung wählen:
-pdcPeas.SearchFind = Schlüsselwörter:
+pdcPeas.requestSelect = Die Anforderung w\u00E4hlen:
+pdcPeas.SearchFind = Schl\u00FCsselw\u00F6rter:
 pdcPeas.NbResultSearch = Anzahl der anzuzeigenden Ergebnisse: 
 pdcPeas.SortResultSearch = sortiert nach :  
 pdcPeas.SortValueSearch.1 = Relevanz
@@ -138,7 +138,7 @@ pdcPeas.ManyResultPages =  gefundene Antworten
 pdcPeas.NextResults = Nachfolgende Antworten
 pdcPeas.PreviousResults = Vorhergehende Antworten
 pdcPeas.ResultPage = Ergebniss der Suche
-pdcPeas.ForYourQuery = für
+pdcPeas.ForYourQuery = f\u00FCr
 pdcPeas.SearchPage = Suche
 pdcPeas.Score = Stichhaltigkeit
 pdcPeas.Download = Herunterl.
@@ -147,7 +147,7 @@ pdcPeas.Document = Dokument
 pdcPeas.Documents = Dokumente
 pdcPeas.Preview = Beschreibung
 pdcPeas.Domain = Standort
-pdcPeas.Attachment = Beigefügte Datei
+pdcPeas.Attachment = Beigef\u00FCgte Datei
 
 pdcPeas.synSearchExtension = Ihre Suche ist erweitert worden auf die Synonyme von
 pdcPeas.search = Suchen
@@ -157,7 +157,7 @@ pdcPeas.searchDomain = Suchbereich
 
 pdcPeas.AllAuthors = Alle
 pdcPeas.Navigation = Navigation
-pdcPeas.requete = Schlüsselwörter
+pdcPeas.requete = Schl\u00FCsselw\u00F6rter
 pdcPeas.typerecherche = Art der Suche
 pdcPeas.resultat = Ergebniss
 pdcPeas.reptrouve = gefundene Antworten
@@ -167,7 +167,7 @@ pdcPeas.emplacement = Standort
 pdcPeas.definition = Definition
 
 pdcPeas.glossaire_to_view = Das Glossar anzeigen
-pdcPeas.tracker_to_select = Die Auswahl bestätigen
+pdcPeas.tracker_to_select = Die Auswahl best\u00E4tigen
 
 pdcPeas.lenDescription = Die Definition ist auf 1000 Zeichen begrenzt
 
@@ -186,10 +186,10 @@ pdcPeas.askOnce.Error = Keine Antwort.
 pdcSubscription.path = Meine Interessenschwerpunkte
 pdcSubscription.newSubsription = Neuer Interessenschwerpunkt
 pdcSubscription.Name = Name
-pdcSubscription.Name.NotEmpty = Das Feld 'Name' muss ausgefüllt werden
-pdcSubscription.Values.NotEmpty = Wählen Sie bitte mindestens eine Achse
+pdcSubscription.Name.NotEmpty = Das Feld 'Name' muss ausgef\u00FCllt werden
+pdcSubscription.Values.NotEmpty = W\u00E4hlen Sie bitte mindestens eine Achse
 pdcSubscription.ok = OK
-pdcSubscription.selection = Gewählte Achse
+pdcSubscription.selection = Gew\u00E4hlte Achse
 
 pdcPeas.docsNumber = Anzahl Dokumente
 
@@ -198,11 +198,11 @@ pdcPeas.PDCUtilization = Die Verwendung des PDC parametrisieren
 fileBoxPlus.CreateNewDocument = Ein Dokument erstellen
 fileBoxPlus.AllDocuments = Alle Dokumente
 whitePages.CreateAUsercard = Ein Blatt erstellen
-whitePages.AllCards = Alle Blätter
+whitePages.AllCards = Alle Bl\u00E4tter
 expertLocator.CreateAUsercard = Ein Blatt erstellen
-expertLocator.AllCards = Alle Blätter
+expertLocator.AllCards = Alle Bl\u00E4tter
 questionReply.AriseAQuestion = Eine Frage stellen
-questionReply.AddAFAQ = Eine FAQ hinzufügen 
+questionReply.AddAFAQ = Eine FAQ hinzuf\u00FCgen
 questionReply.AllQuestions = Alle Fragen
 
 pdcPeas.TheField = Das Feld   
@@ -219,7 +219,7 @@ pdcPeas.helpCol1Header = <b>Verwendung der Abrundung in allen Feldern:</b>
 pdcPeas.helpCol2Header = <b>Verwendung der Boolschen Operatoren:</b>
 pdcPeas.helpCol3Header = <b>Suche einer Zeichenkette</b>
 
-pdcPeas.helpCol1Content1 = Um alle Wörter zu erhalten, die z.B. mit:
+pdcPeas.helpCol1Content1 = Um alle W\u00F6rter zu erhalten, die z.B. mit:
 pdcPeas.helpCol1Content2 = HYDRO
 pdcPeas.helpCol1Content3 = beginnen, einen Stern hinter das Wort setzen: HYDRO*
 
@@ -229,18 +229,18 @@ pdcPeas.helpCol2Content3 = Und: <b>AND</b>&nbsp;&nbsp;&nbsp;&nbsp;z.B.: Hund AND
 pdcPeas.helpCol2Content4 = Oder: <b>OR</b>&nbsp;&nbsp;&nbsp;&nbsp;z.B.: HUND OR Katze
 pdcPeas.helpCol2Content5 = Nicht: <b>NOT</b>&nbsp;&nbsp;&nbsp;&nbsp;Ex.: Katze NOT Siamese
 
-pdcPeas.helpCol3Content1 = Die Zeichenkette zwischen Anführungszeichen setzen 
+pdcPeas.helpCol3Content1 = Die Zeichenkette zwischen Anf\u00FChrungszeichen setzen
 pdcPeas.helpCol3Content2 = z.B.: "Reservation eines Saales"
 pdcPeas.helpCol3Content3 = 
 pdcPeas.helpCol3Content4 = 
 
 pdcPeas.openUserPanelPeas           = Zugang zum Benutzer-Panel
 
-pdcPeas.classifyImpossible = Klassierung momentan unmöglich. Vom Administrator ist keine Klassierungsrichtung gewählt worden.
+pdcPeas.classifyImpossible = Klassierung momentan unm\u00F6glich. Vom Administrator ist keine Klassierungsrichtung gew\u00E4hlt worden.
 
 pdcPeas.In = in 
-pdcPeas.ToExport = Die gewählten Dokumente exportieren
-pdcPeas.exportPDF = Ausgewählte pdf Drucken
+pdcPeas.ToExport = Die gew\u00E4hlten Dokumente exportieren
+pdcPeas.exportPDF = Ausgew\u00E4hlte pdf Drucken
 
 pdcPeas.SearchResult = Ergebnisse
 pdcPeas.SearchSimple = Einfach
@@ -251,8 +251,8 @@ pdcPeas.Template = Formular
 
 pdcPeas.inProgress = Suche im gange !<br/>Bitte warten...
 
-pdcPeas.choiceForm = Sie müssen ein Formular auswählen
+pdcPeas.choiceForm = Sie m\u00FCssen ein Formular ausw\u00E4hlen
 
 pdcPeas.Axe = Achse
 
-pdcPeas.selectAll=Alles auswählen
+pdcPeas.selectAll=Alles ausw\u00E4hlen
