--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/personalizationPeas/multilang/personalizationBundle_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/personalizationPeas/multilang/personalizationBundle_de.properties
@@ -22,14 +22,14 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 
-FrenchLanguage = Français
+FrenchLanguage = Fran\u00E7ais
 GermanLanguage = Deutsch
 EnglishLanguage = English
-language_fr = Französisch
+language_fr = Franz\u00F6sisch
 language_de = Deutsch
 language_en = Englisch
 PersonalizationTitleTab1 = Personalisieren > Einstellungen
-PersonalizationTitleTab2 = Personalisieren > Mein Profil ändern
+PersonalizationTitleTab2 = Personalisieren > Mein Profil \u00E4ndern
 
 FavoriteLanguage = Sprache
 FavoriteLook = Muster
@@ -37,7 +37,7 @@ Language = Sprache
 Look = Erscheinung
 DefaultWorkSpace = Standard-Bereich
 Preferences = Voreinstellungen
-Identity = Identität
+Identity = Identit\u00E4t
 
 Thesaurus = Thesaurus-Modus
 Activate = Aktivieren
@@ -49,9 +49,9 @@ OnlineEditing = Modus Bearbeitung der Office-Dokumente
 WebdavEditing = Aktivieren der direkten Bearbeitung von Dokumenten mit Webdav
 WebdavEditing.installation = Installation des Webdav Online-bearbeitungs Moduls 
 
-operationPane_addadress = Einen Benachrichtigungskanal hinzufügen
+operationPane_addadress = Einen Benachrichtigungskanal hinzuf\u00FCgen
 operationPane_paramnotif = Die Regeln bearbeiten
-operationPane_addguideline = Eine Regel hinzufügen
+operationPane_addguideline = Eine Regel hinzuf\u00FCgen
 
 arrayPane_Default = Standard
 arrayPane_Nom = Kanal
@@ -60,12 +60,12 @@ arrayPane_Usage = Verwendung
 arrayPane_Adresse = Kontakt
 arrayPane_Operations = Operationen
 
-iconPane_Default = Standardmässig fixieren
+iconPane_Default = Standardm\u00E4ssig fixieren
 iconPane_Test = Testen
 
-browseBar_Path2 = Hinzufügung eines Benachrichtigungskanals
+browseBar_Path2 = Hinzuf\u00FCgung eines Benachrichtigungskanals
 browseBar_Path3 = Regeln
-browseBar_Path4 = Änderung des Benachrichtigungskanals
+browseBar_Path4 = \u00C4nderung des Benachrichtigungskanals
 
 type= Typ
 usage = Verwendung
@@ -77,29 +77,29 @@ default = Standard
 
 UndefinedFavoriteSpace = Undefiniert
 
-TestPopUpExplanation = Sie haben soeben das Senden einer Benachrichtigung in ein Fenster getestet. Wenn der Test erfolgreich war, müsste sich ein Fenster Ihres Browsers öffnen.
+TestPopUpExplanation = Sie haben soeben das Senden einer Benachrichtigung in ein Fenster getestet. Wenn der Test erfolgreich war, m\u00FCsste sich ein Fenster Ihres Browsers \u00F6ffnen.
 TestSilverMailExplanation = Sie haben soeben das Senden einer Benachrichtigung in eine Benachrichtigungs-Box getestet. Wenn der Test erfolgreich war, sollten Sie in Ihrer Benachrichtigungs-Box eine Benachrichtigung erhalten haben.
-TestSMTPExplanation = Sie haben soeben das Senden einer Benachrichtigung in eine Mailbox getestet. Wenn der Test erfolgreich war, müssten Sie in Ihrer externen Mailbox eine Meldung erhalten haben.
+TestSMTPExplanation = Sie haben soeben das Senden einer Benachrichtigung in eine Mailbox getestet. Wenn der Test erfolgreich war, m\u00FCssten Sie in Ihrer externen Mailbox eine Meldung erhalten haben.
 
 MesNotifications = Meine Benachrichtigungen
 ParametrerNotification = Parametrisierung
 LireNotification = Benachrichtigungs-Box
 Notifier = Senden einer Benachrichtigung
-MessageSuppressionCanal = Sind Sie sicher, diesen Kanal löschen zu wollen?
-MessageSuppressionRegle = Sind Sie sicher, diese Regel löschen zu wollen?
+MessageSuppressionCanal = Sind Sie sicher, diesen Kanal l\u00F6schen zu wollen?
+MessageSuppressionRegle = Sind Sie sicher, diese Regel l\u00F6schen zu wollen?
 
 UserRights = Rechte
 OldPassword = Altes Passwort
 NewPassword = Neues Passwort
-NewPasswordConfirm = Bestätigung des neuen Passwortes
-WrongNewPwd = Die Bestätigung des neuen Passwortes ist falsch...
+NewPasswordConfirm = Best\u00E4tigung des neuen Passwortes
+WrongNewPwd = Die Best\u00E4tigung des neuen Passwortes ist falsch...
 MessageOK = Ihr Profil ist erfolgreich aktalisiert worden...
 Error_bad_credential = Ihr Passwort ist falsch
-Error_unknown = Ihr Profil kann nicht geändert werden, wenden Sie sich bitte an Ihren Administrator 
-ModifyPasswordNotAllowed1 = Ihr Passwort können Sie hier nicht ändern.
+Error_unknown = Ihr Profil kann nicht ge\u00E4ndert werden, wenden Sie sich bitte an Ihren Administrator
+ModifyPasswordNotAllowed1 = Ihr Passwort k\u00F6nnen Sie hier nicht \u00E4ndern.
 ModifyPasswordNotAllowed2 = Wenden Sie sich an Ihren Administrator...
 LengthPwdLabel = Minimale Anzahl Zeichen
-WrongLength = Das Passwort ist nicht genügend lang!
-NoSpacesInPassword = Das Passwort darf keine Zwischenräume enthalten!
+WrongLength = Das Passwort ist nicht gen\u00FCgend lang!
+NoSpacesInPassword = Das Passwort darf keine Zwischenr\u00E4ume enthalten!
 
-PP.ChangeLookAlert = Der persönliche look wird nur auf die Räume gultig sein wo de Corporate Look nicht aufgezwungen wird.
+PP.ChangeLookAlert = Der pers\u00F6nliche look wird nur auf die R\u00E4ume gultig sein wo de Corporate Look nicht aufgezwungen wird.
