--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/portlet/multilang/portletBundle_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/portlet/multilang/portletBundle_de.properties
@@ -27,11 +27,11 @@
 #
 
 fixColWidth = Die Breite festlegen
-addAColumn = Eine Spalte hinzufügen
-saveChanges = Ihre Änderungen speichern
-revert = Zur vorhergehenden Version zurückkehren
+addAColumn = Eine Spalte hinzuf\u00FCgen
+saveChanges = Ihre \u00C4nderungen speichern
+revert = Zur vorhergehenden Version zur\u00FCckkehren
 colSizeFormat = Folgendes Format verwenden: "n%", "npx" oder "*"
 addToNewCol = Der neuen Spalte zuzuweisende Portlets
-addToCol = Der Spalte hinzuzufügende Portlets
+addToCol = Der Spalte hinzuzuf\u00FCgende Portlets
 portlet = Portlet
 desc = Beschreibung
