--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/selection/multilang/selectionBundle_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/selection/multilang/selectionBundle_de.properties
@@ -25,20 +25,20 @@
 
 selection.usersList          = Liste der Benutzer
 selection.fournisseursList   = Liste der Lieferanten
-selection.acheteursList      = Liste der Käufer
+selection.acheteursList      = Liste der K\u00E4ufer
 selection.adminList          = Liste der Administratoren
 selection.genericList        = Liste der generischen Benutzer
 selection.infoList           = Liste der Informatiker
 
 selection.allUsers        = Alle Benutzer
 selection.fournisseurs    = Lieferanten
-selection.acheteurs       = Käufer
+selection.acheteurs       = K\u00E4ufer
 selection.admin           = Administratoren
 selection.genericUsers    = Generische Benutzer
 selection.informatique    = Informatiker
 
-selection.arttitle        = Verfügbar
-selection.artfouList      = Auswahl der hinzuzufügenden Artikel
+selection.arttitle        = Verf\u00FCgbar
+selection.artfouList      = Auswahl der hinzuzuf\u00FCgenden Artikel
 selection.fouCode         = Lieferanten-Code
 selection.reference       = Lieferanten-Referenz
 selection.artid           = Generische Referenz
