--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/selectionPeas/multilang/selectionPeasBundle_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/selectionPeas/multilang/selectionPeasBundle_de.properties
@@ -33,19 +33,19 @@ selectionPeas.helpBrowse        = In der Baumstruktur surfen
 selectionPeas.helpSearchElement = Einen Benutzer suchen
 selectionPeas.helpSearchSet     = Eine Gruppe suchen
 selectionPeas.helpCart          = Den Einkaufskorb zeigen
-selectionPeas.removeFromCart    = Die gewählten Elemente löschen 
-selectionPeas.removeAllFromCart = Alle Elemente löschen
-selectionPeas.confirmRemoveFromCart    = Sind Sie sicher, die gewählten Elemente im Einkaufskorb löschen zu wollen?
-selectionPeas.confirmRemoveAllFromCart = Sind Sie sicher, alle Elemente im Einkaufskorb löschen zu wollen?
+selectionPeas.removeFromCart    = Die gew\u00E4hlten Elemente l\u00F6schen
+selectionPeas.removeAllFromCart = Alle Elemente l\u00F6schen
+selectionPeas.confirmRemoveFromCart    = Sind Sie sicher, die gew\u00E4hlten Elemente im Einkaufskorb l\u00F6schen zu wollen?
+selectionPeas.confirmRemoveAllFromCart = Sind Sie sicher, alle Elemente im Einkaufskorb l\u00F6schen zu wollen?
 
 selectionPeas.searchResult    = Ergebniss
 selectionPeas.searchCriteres  = Suchkriterien
-selectionPeas.selectedNumber  = Gewählte Elemente
+selectionPeas.selectedNumber  = Gew\u00E4hlte Elemente
 selectionPeas.quickSelect = Schnellwahl
 selectionPeas.filter = Filter
 
-selectionPeas.selectAll = Alle Wählen
-selectionPeas.unSelectAll = Ganze Wahl rückgängig machen
+selectionPeas.selectAll = Alle W\u00E4hlen
+selectionPeas.unSelectAll = Ganze Wahl r\u00FCckg\u00E4ngig machen
 
 selectionPeas.rootName = Stamm
 selectionPeas.usersAll = Benutzer  
@@ -53,11 +53,11 @@ selectionPeas.usersOfGroup = Benutzer der Gruppe
 selectionPeas.groupsAll = "Stamm"-Gruppen 
 selectionPeas.groupsOfGroup = Untergruppen von  
 
-selectionPeas.groupsOfUser = Zugehörigkeitsgruppen
+selectionPeas.groupsOfUser = Zugeh\u00F6rigkeitsgruppen
 selectionPeas.directUsersOfGroup = Benutzer
-selectionPeas.groupParent = Übergeordnete Gruppe
+selectionPeas.groupParent = \u00DCbergeordnete Gruppe
 
-selectionPeas.selectedGroups = Gewählte Gruppen
-selectionPeas.selectedUsers = Gewählte Benutzer
+selectionPeas.selectedGroups = Gew\u00E4hlte Gruppen
+selectionPeas.selectedUsers = Gew\u00E4hlte Benutzer
 
 selectionPeas.domain = Domain
