--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/versioningPeas/multilang/versioning_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/versioningPeas/multilang/versioning_de.properties
@@ -47,14 +47,14 @@ checkOut = Reservieren
 addNewVersion = Eine neue Version erstellen
 newDocumentVersion = Neue Version des Dokumentes
 new_document = Neues Dokument
-browse = Blättern
+browse = Bl\u00E4ttern
 typeOfVersion = Art der Version
-public = Öffentlich
+public = \u00D6ffentlich
 archive = Arbeit
 required = obligatorisch
 document = Dokument
-nomVide = Sie müssen alle obligatorischen Felder ausfüllen
-pleaseFill = Sie müssen alle obligatorischen Felder ausfüllen
+nomVide = Sie m\u00FCssen alle obligatorischen Felder ausf\u00FCllen
+pleaseFill = Sie m\u00FCssen alle obligatorischen Felder ausf\u00FCllen
 
 allVersions = Alle Versionen...
 
@@ -67,21 +67,21 @@ writerlist.approval = Mit Genehmigung nicht geordnet
 writerlist.simple   = Ohne Genehmigung nicht geordnet
 
 operation.validate = OK
-operation.refuse   = Zurückweisen
+operation.refuse   = Zur\u00FCckweisen
 
 // erreurs
 erreur = Fehler
 champsTropLong = Die Beschreibung ist zu lang
 
 popupTitle = DIVA
-confirmDelete = Wollen Sie dieses Dokument löschen?
+confirmDelete = Wollen Sie dieses Dokument l\u00F6schen?
 
-readerlist.ToUserPanel = Liste der Leser ändern
-writerlist.ToUserPanel = Liste der Redaktoren ändern
-versioning.SelectReaders = Vählen sie die Leser Ihrer Datei
-versioning.SelectWriters = Vählen sie die Redaktoren Ihrer Datei
+readerlist.ToUserPanel = Liste der Leser \u00E4ndern
+writerlist.ToUserPanel = Liste der Redaktoren \u00E4ndern
+versioning.SelectReaders = V\u00E4hlen sie die Leser Ihrer Datei
+versioning.SelectWriters = V\u00E4hlen sie die Redaktoren Ihrer Datei
 versioning.SaveList = Speichern Sie die Liste der Benutzer und Gruppen als Modell
 versioning.SaveListWriters = Speichern Sie die Liste der Benutzer als Modell
 versioning.ListSaved = Modell der Liste gespeichert... 
-versioning.warning.checkin.locked=Die Datei ist noch im on-line Bearbeitungsmodus.<br/>Bitte schließen Sie diese Datein bevor Sie Sie freigeben.
+versioning.warning.checkin.locked=Die Datei ist noch im on-line Bearbeitungsmodus.<br/>Bitte schlie\u00DFen Sie diese Datein bevor Sie Sie freigeben.
 versioning.warning.checkin.locked.title=Datei gesperrt
