--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/wysiwyg/multilang/wysiwygBundle_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/wysiwyg/multilang/wysiwygBundle_de.properties
@@ -36,12 +36,12 @@ SaveAndExit = Sichern und verlassen
 
 # For Website only
 ErreurmPrefix = Sie haben keinen Wert in das Feld eingegeben 
-ErreurFichierUpload = Fehler, es können nur statische HTML-Seiten oder Bilder hinaufgeladen werden 
+ErreurFichierUpload = Fehler, es k\u00F6nnen nur statische HTML-Seiten oder Bilder hinaufgeladen werden
 FichierUpload = Bild zum Hinaufladen
 ErreurmSuffix = Dieser Wert muss eingegeben werden. 
 NameFile = Der Name der Datei
 MustNotContainSpecialChar = darf die folgenden Zeichen nicht enthalten: 
-Char7 = & ; + % # ' ² é è ç à ^ ù ° ¨ £ µ § ¤
+Char7 = & ; + % # ' \u00B2 \u00E9 \u00E8 \u00E7 \u00E0 ^ \u00F9 \u00B0 \u00A8 \u00A3 \u00B5 \u00A7 \u00A4
 RequiredField = Obligatorisch
 UploadTitle = Datei 
 Valider = OK
