--- a/config-core/src/main/config/properties/com/stratelia/webactiv/agenda/multilang/agenda_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/agenda/multilang/agenda_de.properties
@@ -53,18 +53,18 @@ refuserInvitation = Ablehnen
 categories = Rubriken 
 listeCategories = Liste der Rubriken
 listeCategoriesVide = Leer 
-categoriesDispo = Verfügbare Rubriken
-editionCategories = Rubriken wählen
+categoriesDispo = Verf\u00FCgbare Rubriken
+editionCategories = Rubriken w\u00E4hlen
 toutesCategories = Alle
 
 // Classification
 classification = Art 
-public = Öffentlich 
+public = \u00D6ffentlich 
 private = Privat 
 confidential = Vertraulich
 
 // priorite
-priorite = Priorität 
+priorite = Priorit\u00E4t
 priorite0 = Undefiniert
 priorite1 = Hoch
 priorite2 = Mittel
@@ -73,24 +73,24 @@ priorite3 = Niedrig
 // Operation
 fermer = Schliessen 
 nouvelleNote = Neues Ereignis
-confirmationSuppressionNote = Sind Sie sicher, das Ereignis löschen zu wollen?
+confirmationSuppressionNote = Sind Sie sicher, das Ereignis l\u00F6schen zu wollen?
 ajouterNote = Neues Ereignis
-ajouter = Hinzufügen 
-supprimer = Löschen 
+ajouter = Hinzuf\u00FCgen
+supprimer = L\u00F6schen
 mettreAJour = OK
-retourAgenda = Zurück zur Agenda
-retour = Zurück
+retourAgenda = Zur\u00FCck zur Agenda
+retour = Zur\u00FCck
 ajoutOk = Ajout OK
-majOk = Hinzufügung OK
-suppressionOk = Löschung OK
-supprimerNote = Löschen 
-modifierListeDiffusion = Ändern 
-trouverCreneau = Eine Verfügbarkeit finden
-modifierCategories = Die Rubriken ändern
+majOk = Hinzuf\u00FCgung OK
+suppressionOk = L\u00F6schung OK
+supprimerNote = L\u00F6schen
+modifierListeDiffusion = \u00C4ndern 
+trouverCreneau = Eine Verf\u00FCgbarkeit finden
+modifierCategories = Die Rubriken \u00E4ndern
 afficherCalendrier = Kalender anzeigen
 mettreAJour = OK
 annuler = Abbrechen 
-retour = Zurück 
+retour = Zur\u00FCck
 valider = OK
 
 // attribut note
@@ -133,7 +133,7 @@ jour1 = Sonntag
 // mois
 mois0 = Januar
 mois1 = Februar
-mois2 = März
+mois2 = M\u00E4rz
 mois3 = April
 mois4 = Mai
 mois5 = Juni
@@ -149,45 +149,45 @@ utilisateurInconnu = Benutzer unbekannt
 saisieErreur = Eingabefehler: 
 dateDebutErreur = Das Anfangsdatum richtig eingeben (z.B.: 01/09/2008)
 dateFinIncorrecte = Das Schlussdatum richtig eingeben (z.B.: 01/09/2008)
-nameErreur = Sie müssen den Namen angeben
-organisateurErreur = Sie müssen den Organisator angeben
+nameErreur = Sie m\u00FCssen den Namen angeben
+organisateurErreur = Sie m\u00FCssen den Organisator angeben
 dateFinErreur = Das Anfangsdatum muss vor dem Schlussdatum liegen
-heureFinErreur = Sie müssen die Schlusszeit angeben, wenn es eine Anfangszeit hat
-heureDebutErreur = Sie müssen die Anfangszeit angeben, wenn es eine Schlusszeit hat
+heureFinErreur = Sie m\u00FCssen die Schlusszeit angeben, wenn es eine Anfangszeit hat
+heureDebutErreur = Sie m\u00FCssen die Anfangszeit angeben, wenn es eine Schlusszeit hat
 heureFinAvantDebutErreur = Das Schlussdatum muss nach dem Anfangsdatum liegen
 champsTropLong = Die Beschreibungsfelder sind zu lang!
 TheField = das Feld 
-MustContainsText = muss ausgefüllt werden 
-ContainsTooLargeText = darf nicht grösser sein als 
+MustContainsText = muss ausgef\u00FCllt werden
+ContainsTooLargeText = darf nicht gr\u00F6sser sein als
 NbMaxTextArea = 2000 
 Characters = Zeichen
 MustContainsCorrectDate = muss ein richtiges Datum enthalten 
 MustContainsPostDateToBeginDate = muss ein Datum nach dem Anfangsdatum enthalten 
 MustContainsPostHourToBeginHour = muss eine Zeit nach der Anfangszeit enthalten 
-ThisFormContains = Achtung, dieses Formular enthält 
+ThisFormContains = Achtung, dieses Formular enth\u00E4lt
 Error = Fehler 
 Errors = Fehler 
 
 // RDV
 NewRDV = Neues Rendezvous
-NewRDVcalled = legt für Sie einen neuen Rendezvous-Termin fest, mit dem Titel
+NewRDVcalled = legt f\u00FCr Sie einen neuen Rendezvous-Termin fest, mit dem Titel
 JourRDV = am
 HeureRDV = um
-ThanksToConfirm = Bitte bestätigen Sie, ob Sie anwesend sein werden oder nicht
+ThanksToConfirm = Bitte best\u00E4tigen Sie, ob Sie anwesend sein werden oder nicht
 
 //Agenda sharing
 viewOtherAgenda = Die Agenda eines Benutzers sehen  
-viewCurrentAgenda = Zurück zu Ihrer Agenda
+viewCurrentAgenda = Zur\u00FCck zu Ihrer Agenda
 privateEvent = (Privat)
 userAgenda = Agenda von <b> * </b>
 agenda.userAgenda = Agenda von *
-busy = Nicht verfügbar
+busy = Nicht verf\u00FCgbar
 privateEventLabel = Privat
-publicEventLabel = Öffentlich
+publicEventLabel = \u00D6ffentlich
 allDay = Ganzer Tag
 
 //permalink
-agenda.CopyAgendaLink = Zum Kopieren des Links in die Agenda dieses Benutzers: Rechtsklick, dann "Verknüpfung kopieren"
+agenda.CopyAgendaLink = Zum Kopieren des Links in die Agenda dieses Benutzers: Rechtsklick, dann "Verkn\u00FCpfung kopieren"
 
 //import
 agenda.importSettings = Konfiguration des Imports
@@ -196,33 +196,33 @@ agenda.synchroType = Importierung
 agenda.outlookSynchro = MS Outlook
 agenda.notesSynchro = Lotus Notes
 agenda.noSynchro = Keine Importierung 
-agenda.synchroDelay = Periodizität
+agenda.synchroDelay = Periodizit\u00E4t
 agenda.minutes = Minuten
 agenda.hostName = Mein Computer
 
 //Notifications
-titleUpdate = Benachrichtigung über Änderungen eines Rendezvous
-titleDelete = Benachrichtigung zur löschung eines Rendezvous
+titleUpdate = Benachrichtigung \u00FCber \u00C4nderungen eines Rendezvous
+titleDelete = Benachrichtigung zur l\u00F6schung eines Rendezvous
 subject = Ihr Rendezvous benannt 
 with = mit
 delayed = wurde verschoben am
 planned = geplant am
-removed = wurde gelöscht. 
+removed = wurde gel\u00F6scht.
 
 //Rss
 agenda.agenda = Kalender
-agenda.rssNext = Nächstes Ereignis
+agenda.rssNext = N\u00E4chstes Ereignis
 agenda.rssPrivateEvent = Private Ereignisse
 
 
 # Import/Export/Synchro Ical
 agenda.ExportIcalCalendar = Export im iCal-Format
-agenda.ExportInProgress = Export läuft...
+agenda.ExportInProgress = Export l\u00E4uft...
 agenda.ExportSucceeded = Export erfolgreich...
 agenda.ExportEmpty = Kein Ereigniss zu exportieren...
 
 agenda.ImportIcalCalendar = Eine ICal-Datei importieren
-agenda.ImportInProgress = Import läuft...
+agenda.ImportInProgress = Import l\u00E4uft...
 agenda.ImportSucceeded = Import erfolgreich...
 agenda.ImportFailed = Der Import ist fehlgeschlagen.
 agenda.ImportEmpty = Kein Ereigniss zu importieren...
@@ -235,11 +235,11 @@ agenda.SynchroRssUrl = RSS-Feeds des Remote-Agenda
 agenda.SynchroRemoteLogin = Login :
 agenda.SynchroRemotePwd = Passwort :
 agenda.SynchroCharset = Zeichensatz :
-agenda.SynchroInProgress = Import läuft...
+agenda.SynchroInProgress = Import l\u00E4uft...
 
 agenda.SynchroFailed = 	Die Synchronisation ist fehlgeschlagen.
 agenda.SynchroSucceeded = Synchronisation erfolgreich.
-agenda.Subscribe = Verknüpfung für den privaten zugriff auf diese Agenda
+agenda.Subscribe = Verkn\u00FCpfung f\u00FCr den privaten zugriff auf diese Agenda
 
 agenda.ChooseDaysOff = 	Auswahl der Tage
 agenda.DaysOffSilver = Ruhetage
