--- a/config-core/src/main/config/properties/com/stratelia/webactiv/clipboard/multilang/clipboard_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/clipboard/multilang/clipboard_de.properties
@@ -25,7 +25,7 @@
 clipboard = Zwischenspeicher
 // navigation
   accueil = Empfang
-  retour = Zurück
+  retour = Zur\u00FCck
 // attribut
   titre = Titel
   composant = Dienst
@@ -36,22 +36,22 @@ clipboard = Zwischenspeicher
 // Presse-papier
   copier = Kopieren
   couper = Ausschneiden
-  coller = Einfügen
-reset = Löschen
+  coller = Einf\u00FCgen
+reset = L\u00F6schen
   fermer = Schliessen
-ouvrir = Öffnen
+ouvrir = \u00D6ffnen
 // actions
-  supprimer = Löschen
+  supprimer = L\u00F6schen
   valider = OK
   annuler = Abbrechen
   creation = Erstellen einer QuickInfo
-  edition = Ändern
-  suppression = Löschen
+  edition = \u00C4ndern
+  suppression = L\u00F6schen
 //confirmation
-supprimerQIConfirmation = Sind Sie sicher, die QuickInfo löschen zu wollen?
+supprimerQIConfirmation = Sind Sie sicher, die QuickInfo l\u00F6schen zu wollen?
 // erreurs
 titreObligatoire = Die QuickInfo kann nicht erstellt werden: Den Namen angeben
 dateDebutAvantDateFin = Die QuickInfo kann nicht erstellt werden: Das Anfangsdatum muss vor dem Enddatum liegen
-  pasteError = Einfügen unmöglich
-  copyError = Kopieren unmöglich
+  pasteError = Einf\u00FCgen unm\u00F6glich
+  copyError = Kopieren unm\u00F6glich
 vide =
