--- a/config-core/src/main/config/properties/com/stratelia/webactiv/todo/multilang/todo_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/todo/multilang/todo_de.properties
@@ -32,7 +32,7 @@ editionTodo = Bearbeiten einer Task
 // action
 affichierCalendrier = Kalender
 ajouterTache = Erstellen einer Task
-todoDeleteConfirm = Sind Sie sicher, die Task löschen zu wollen?
+todoDeleteConfirm = Sind Sie sicher, die Task l\u00F6schen zu wollen?
 affecterTodo = Dieser Task Personen zuweisen
 
 // onglets
@@ -41,7 +41,7 @@ suiviAffectation = Zuweisungen
 historique = Vorgeschichte
 
 // attributs du todo
-dueDateToDo = Fälligkeit
+dueDateToDo = F\u00E4lligkeit
 percentCompletedToDo = Fortschritt
 percentUndefined = Nicht gestartet
 listeDiffusion = Zuweisungen
@@ -54,7 +54,7 @@ heureFinToDo = Endzeit
 sansHoraireSpecifique = Ohne Zeitangabe
 
 // liste de diffusion
-editionListeDiffusion = Wählen
+editionListeDiffusion = W\u00E4hlen
 
 // Classification
 classification = Klassifizierung
@@ -71,33 +71,33 @@ utilisateurInconnu = Benutzer unbekannt
 saisieErreur = Eingabefehler: 
 dateDebutErreur = Anfangsdatum richtig eingeben (z.B. : 01/09/2008)
 dateFinIncorrecte = Enddatum richtig eingeben (z.B. : 01/09/2008)
-nameErreur = Sie müssen den Namen angeben.
+nameErreur = Sie m\u00FCssen den Namen angeben.
 pourcentErreur = Fortschritts-Prozentzahl falsch
 MustContainsText = muss eingegeben werden
 MustContainsCorrectDate = muss ein richtiges Datum enthalten
 MustContainsPostDateToBeginDate = muss ein Datum nach dem Anfangsfatum enthalten
-ThisFormContains = Achtung, dieses Formular enthält 
+ThisFormContains = Achtung, dieses Formular enth\u00E4lt
 Error = Fehler
 Errors = Fehler
 ContainsTooLargeText = darf 
 NbMaxTextArea = 2000 
-Characters = Zeichen nicht übersteigen
+Characters = Zeichen nicht \u00FCbersteigen
 
 
 
 // A mettre en general
-retour = Zurück 
+retour = Zur\u00FCck
 ajouter = OK
 mettreAJour = OK
-supprimerTodo = Löschen
-modifierTodo = Zuweisungen ändern
+supprimerTodo = L\u00F6schen
+modifierTodo = Zuweisungen \u00E4ndern
 listeDiffusionVide = Leer
 descriptionToDo = Beschreibung
 nomToDo = Name
 mandatoryFields = Obligatorisch
-public = Öffentlich  
+public = \u00D6ffentlich  
 private = Privat 
-priorite = Priorität
+priorite = Priorit\u00E4t
 
 cadenas_clos = Task geschlossen
-cadenas_ouvert = Task läuft
+cadenas_ouvert = Task l\u00E4uft
