--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/attachment/multilang/attachment_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/attachment/multilang/attachment_de.properties
@@ -22,12 +22,12 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 
-suppressionConfirmation = Sind Sie sicher, die beigefügte Datei löschen zu wollen?
-taille = Grösse
-downloadInProgress = Herunterladung läuft...
-fichierJoint = Beizufügende Datei
-liaisonTerminée = Verbindung erfolgreich
-liaisonInaccessible = Unmöglich die Datei zu finden
+suppressionConfirmation = Sind Sie sicher, die beigef\u00FCgte Datei l\u00F6schen zu wollen?
+taille = Gr\u00F6sse
+downloadInProgress = Herunterladung l\u00E4uft...
+fichierJoint = Beizuf\u00FCgende Datei
+liaisonTermin\u00E9e = Verbindung erfolgreich
+liaisonInaccessible = Unm\u00F6glich die Datei zu finden
 nomVide = Der Name der Datei muss eingegeben werden.
 fichierInexistant = Die Datei gibt es nicht!
 Title = Titel
@@ -41,26 +41,26 @@ readOnly = Reserviert von
 at = am
 until = bis am
 
-confirm.checkin.message=Wollen Sie die Änderungen speichern?
+confirm.checkin.message=Wollen Sie die \u00C4nderungen speichern?
 
-CopyLink = Zum Kopieren des Links in diese Datei: Rechtsklick, dann 'Verknüpfung kopieren'
+CopyLink = Zum Kopieren des Links in diese Datei: Rechtsklick, dann 'Verkn\u00FCpfung kopieren'
 
-attachment.SameFileNameAlreadyCheckout = Sie haben bereits eine Datei mit dem gleichen Namen reserviert!<br>Um zu verhindern, dass eventuelle Änderungen überschrieben werden, können Sie nicht gleichzeitig zwei Dateien mit dem gleichen Namen reservieren.
+attachment.SameFileNameAlreadyCheckout = Sie haben bereits eine Datei mit dem gleichen Namen reserviert!<br>Um zu verhindern, dass eventuelle \u00C4nderungen \u00FCberschrieben werden, k\u00F6nnen Sie nicht gleichzeitig zwei Dateien mit dem gleichen Namen reservieren.
 
 //------------------------------------------------------------------------------------//
-//                  A mettre à jour dans le multilang general                         //
+//                  A mettre \u00E0 jour dans le multilang general                         //
 //------------------------------------------------------------------------------------//
 
-modifier = Ändern 
-supprimer = Löschen 
+modifier = \u00C4ndern 
+supprimer = L\u00F6schen
 fermer = Schliessen
 description = Beschreibung 
 valider = OK
 annuler = Abbrechen 
-retour = Zurück
+retour = Zur\u00FCck
 type = Typ
 fichier = Datei
-ajouter = Hinzufügen
+ajouter = Hinzuf\u00FCgen
 zip = Zippen
 uploadDate = Heruntergeladen am
 
@@ -69,15 +69,15 @@ erreur = Fehler
 lier = Verbinden
 
 attachment.notifSubjectLib = Reservierte Datei : freigegeben
-attachment.notifSubjectExpiry = Reservierte Datei : läuft morgen ab
-attachment.notifSubjectAlert = Reservierte Datei : läuft bald ab
+attachment.notifSubjectExpiry = Reservierte Datei : l\u00E4uft morgen ab
+attachment.notifSubjectAlert = Reservierte Datei : l\u00E4uft bald ab
 attachment.notifName = Die Reservierung der Datei
-attachment.notifUserExpiry = läuft morgen ab
-attachment.notifUserAlert = läuft bald ab
+attachment.notifUserExpiry = l\u00E4uft morgen ab
+attachment.notifUserAlert = l\u00E4uft bald ab
 attachment.notifUserLib = ist abgelaufen und wurde freigegeben
 
-attachment.suppressionWhichTranslations = Die Datei "*" Die Sie löschen wollen hat mehrere Übersetzungen.<br/>Was möchten Sie löschen ?
-attachment.suppressionConfirmation = Sind Sie sicher die Datei "*" löschen zu wollen ?
-attachment.allTranslations = Alle Übersetzungen
+attachment.suppressionWhichTranslations = Die Datei "*" Die Sie l\u00F6schen wollen hat mehrere \u00DCbersetzungen.<br/>Was m\u00F6chten Sie l\u00F6schen ?
+attachment.suppressionConfirmation = Sind Sie sicher die Datei "*" l\u00F6schen zu wollen ?
+attachment.allTranslations = Alle \u00DCbersetzungen
 
-attachment.warning.checkin.locked=Die Datei ist noch im on-line Bearbeitungsmodus. <br/>Bitte schließen Sie sie bevor Sie diese freigeben können.
+attachment.warning.checkin.locked=Die Datei ist noch im on-line Bearbeitungsmodus. <br/>Bitte schlie\u00DFen Sie sie bevor Sie diese freigeben k\u00F6nnen.
