--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/comment/multilang/comment_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/comment/multilang/comment_de.properties
@@ -22,14 +22,14 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 
-add = Hinzufügen
+add = Hinzuf\u00FCgen
 author = Herausgeber
 c_comment = Kommentar
 created = Erstellt
-modified = Geändert
-modify = Ändern
-delete = Löschen
-suppressionConfirmation = Sind Sie sicher, folgendes löschen zu wollen:
+modified = Ge\u00E4ndert
+modify = \u00C4ndern
+delete = L\u00F6schen
+suppressionConfirmation = Sind Sie sicher, folgendes l\u00F6schen zu wollen:
 type = Typ
 name = Name
 version = Version
@@ -51,13 +51,13 @@ newDocumentVersion = Neue Version des Dokumentes
 new_document = Neues Dokument
 browse = Browsen
 typeOfVersion = Typ der Version
-public = Öffentlich
+public = \u00D6ffentlich
 archive = Archiv
 required = obligatorisch
 document = Dokument
-nomVide = Sie müssen alle obligatorischen Felder ausfüllen
-pleaseFill = Sie müssen alle obligatorischen Felder ausfüllen
-pleaseFill_single = Sie müssen alle obligatorischen Felder ausfüllen.
+nomVide = Sie m\u00FCssen alle obligatorischen Felder ausf\u00FCllen
+pleaseFill = Sie m\u00FCssen alle obligatorischen Felder ausf\u00FCllen
+pleaseFill_single = Sie m\u00FCssen alle obligatorischen Felder ausf\u00FCllen.
 
 // erreurs
 erreur = Fehler
@@ -73,9 +73,9 @@ comment.EJB_NoConnection = Die Verbindung zur Datenbank kann nicht geschlossen w
 comment.AC_NoInitcommentHome = Die Home-Schnittstellen-Komponente kann nicht erhalten werden
 comment.AC_NoCreatecommentDetail = Der Kommentar kann nicht erstellt werden
 comment.AC_NoFindAttachementDetail = Der Kommentar kann nicht gefunden werden
-comment.AC_NoDeletecommentDetail = Der Kommentar kann nicht gelöscht werden
+comment.AC_NoDeletecommentDetail = Der Kommentar kann nicht gel\u00F6scht werden
 comment.AC_NoCreatePath = Ein Kontext kann nicht erstellt werden
-comment.AC_NoDeletePath = Ein Kontext kann nicht gelöscht werden
-comment.AC_NoDeleteOnServer = die Dateien können nicht vom Server gelöscht werden
+comment.AC_NoDeletePath = Ein Kontext kann nicht gel\u00F6scht werden
+comment.AC_NoDeleteOnServer = die Dateien k\u00F6nnen nicht vom Server gel\u00F6scht werden
 comment.AC_NoCreateIndex = die Datei wird von der Suchmaschine nicht indexiert
 comment.AC_NoDeleteIndex = die Datei wird von der Suchmaschine immer indexiert
