--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/date/multilang/date_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/date/multilang/date_de.properties
@@ -50,7 +50,7 @@ hourOutputFormat = HH:mm
 
   mois0 = Januar
   mois1 = Febraur
-  mois2 = März
+  mois2 = M\u00E4rz
   mois3 = April
   mois4 = Mai
   mois5 = Juni
