--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/peasUtil/multiLang/fileServerBundle_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/peasUtil/multiLang/fileServerBundle_de.properties
@@ -27,7 +27,7 @@ warning =									\
 <body>										\
 										\
 <h1>Warnung ..... </h1>								\
-Die Erzeugung des HTML-Dokumentes für die Vorschau hatte einige Probleme.	\
+Die Erzeugung des HTML-Dokumentes f\u00FCr die Vorschau hatte einige Probleme.	\
 <br>										\
 <center>Vielleicht ist das HTML-Dokument leer!!</center>				\
 </body>										\
