--- a/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle_de.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle_de.properties
@@ -22,12 +22,12 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 
-JSPP.BackToMainSpacePage = Zurück zu Hauptseite des Bereichs
+JSPP.BackToMainSpacePage = Zur\u00FCck zu Hauptseite des Bereichs
 
 JSPP.homepageType = Startseiten-Typ
 
 JSPP.main = Silverpeas-Startseite
-JSPP.manageHomePage = Räume
+JSPP.manageHomePage = R\u00E4ume
 
 JSPP.peas = Service
 JSPP.portlet = Portlet
@@ -36,18 +36,18 @@ JSPP.webPage = URL
 JSPP.selectPeas = Wahl eines Service
 JSPP.spaceHomePage = Startseite des Bereichs
 
-JSPP.update = Ändern
+JSPP.update = \u00C4ndern
 JSPP.updateHomePage = Startseite
 
 JSPP.SpaceTemplate = Bereichvorlagen
 JSPP.NoTemplate = Leerbereich
-JSPP.UPSpaceTemplateProfile = Die der Rolle zugewiesenen Gruppen/Benutzer wählen
+JSPP.UPSpaceTemplateProfile = Die der Rolle zugewiesenen Gruppen/Benutzer w\u00E4hlen
 
 JSPP.welcome =  Willlommen im Bereichverwaltungs-Modul
 
 JSPP.maintenanceTout = Silverpeas befindet sich gesamthaft im Wartungs-Modus!
 JSPP.maintenance = Wartungs-Modus:
-JSPP.maintenanceStatus = Dieser Bereich befindet sich gegenwärtig
+JSPP.maintenanceStatus = Dieser Bereich befindet sich gegenw\u00E4rtig
 JSPP.maintenanceTxtModeOn = im Wartungs-Modus...
 JSPP.maintenanceModeOn = Aktiv
 JSPP.maintenanceModeOff = Deaktiviert
@@ -55,45 +55,45 @@ JSPP.maintenanceModeToOn = Wartungs-Modus aktivieren
 JSPP.maintenanceModeToOff = Wartungs-Modus deaktivieren
 
 JSPP.ProfilePanelCreateTitle = Rollen festlegen
-JSPP.ProfilePanelModifyTitle = Rolle ändern
-JSPP.ProfilePanelDeleteTitle = Rolle löschen
+JSPP.ProfilePanelModifyTitle = Rolle \u00E4ndern
+JSPP.ProfilePanelDeleteTitle = Rolle l\u00F6schen
 
 JSPP.SpaceProfilePanelCreateTitle = Anwender der Rolle festlegen
-JSPP.SpaceProfilePanelModifyTitle = Anwender der Rolle ändern
-JSPP.SpaceProfilePanelDeleteTitle = Anwender der Rolle löschen
+JSPP.SpaceProfilePanelModifyTitle = Anwender der Rolle \u00E4ndern
+JSPP.SpaceProfilePanelDeleteTitle = Anwender der Rolle l\u00F6schen
 
-JSPP.ComponentPanelCreateTitle = Einen Dienst hinzufügen
-JSPP.ComponentPanelModifyTitle = Den Dienst ändern
-JSPP.ComponentPanelDeleteTitle = Den Dienst löschen
+JSPP.ComponentPanelCreateTitle = Einen Dienst hinzuf\u00FCgen
+JSPP.ComponentPanelModifyTitle = Den Dienst \u00E4ndern
+JSPP.ComponentPanelDeleteTitle = Den Dienst l\u00F6schen
 
 JSPP.SubSpacePanelCreateTitle = Einen Unter-Bereich erstellen
 JSPP.SpacePanelCreateTitle = Einen Bereich erstellen
-JSPP.SpacePanelModifyTitle = Der Bereich ändern
-JSPP.SpacePanelDeleteTitle = Der Bereich löschen
+JSPP.SpacePanelModifyTitle = Der Bereich \u00E4ndern
+JSPP.SpacePanelDeleteTitle = Der Bereich l\u00F6schen
 
-JSPP.Choose = Wählen Sie...
-JSPP.ModifyStartPage = Startseite ändern
+JSPP.Choose = W\u00E4hlen Sie...
+JSPP.ModifyStartPage = Startseite \u00E4ndern
 
 //form
 JSPP.creationSpace = Bereicherstellung
 JSPP.creationSubSpace = Unter-Bereich-Erstellung
-JSPP.updateSpace = Bereichänderung
-JSPP.creationInstance = Einen Dienst hinzufügen
+JSPP.updateSpace = Bereich\u00E4nderung
+JSPP.creationInstance = Einen Dienst hinzuf\u00FCgen
 JSPP.roleDescription = Beschreibung der Rolle
 
 //erreurs
 MustContainsText = muss eingegeben werden
-ThisFormContains = Achtung, dieses Formular enthält 
-ContainsTooLargeText = darf nicht übersteigen 
+ThisFormContains = Achtung, dieses Formular enth\u00E4lt
+ContainsTooLargeText = darf nicht \u00FCbersteigen
 NbMaxTextArea = 2000 
 Characters = Zeichen
 JSPP.MustBeginsByHTTP = muss ein mit http:// beginnendes URL enthalten
 
 //messages
-JSPP.MessageSuppressionSpaceBegin = Sind Sie sicher, dieser Bereich löschen zu wollen?\\n\\n-->
+JSPP.MessageSuppressionSpaceBegin = Sind Sie sicher, dieser Bereich l\u00F6schen zu wollen?\\n\\n-->
 JSPP.MessageSuppressionSpaceEnd = <--\\n
-JSPP.MessageSuppressionSpaceManager = Sind Sie sicher, die Benutzer löschen zu wollen?
-JSPP.MessageSuppressionInstanceBegin = Sind Sie sicher, diesen Dienst löschen zu wollen?\\n\\n-->
+JSPP.MessageSuppressionSpaceManager = Sind Sie sicher, die Benutzer l\u00F6schen zu wollen?
+JSPP.MessageSuppressionInstanceBegin = Sind Sie sicher, diesen Dienst l\u00F6schen zu wollen?\\n\\n-->
 JSPP.MessageSuppressionInstanceEnd = <--\\n
 
 //onglets roles
@@ -112,41 +112,41 @@ JSPP.ComponentPlace = Verschiebung vor die Komponente
 
 // Deplacement de composant
 JSPP.SpaceIn = Verschiebung in dem Bereich
-JSPP.SpacesNotInMaintenance	= Der Quell- und der Bestimmungsbereich müssen sich in Wartung befinden...
+JSPP.SpacesNotInMaintenance	= Der Quell- und der Bestimmungsbereich m\u00FCssen sich in Wartung befinden...
 JSPP.MessageConfirmMovingComponentInSpace = Sind Sie sicher, diese Komponente in diesem Bereich verschieben zu wollen?
-JSPP.ExistingComponentName = Verschiebung unmöglich... Im Bestimmungsbereich befindet sich bereits eine Komponente mit diesem Namen.
-JSPP.movingInProgress = Verschiebung läuft...
+JSPP.ExistingComponentName = Verschiebung unm\u00F6glich... Im Bestimmungsbereich befindet sich bereits eine Komponente mit diesem Namen.
+JSPP.movingInProgress = Verschiebung l\u00E4uft...
 
 //Sauvegarde
 JSPP.BackupUnlimited = Sichern/Wiederherstellen von Komponenten
 JSPP.BackupSpace = Komponenten des Bereichs sichern/wiederherstellen
 
 JSPP.ErrorComponentCreation = Fehler bei der Erstellung der Komponente
-JSPP.ErrorComponentUpdate = Fehler bei der Änderung der Komponente
-JSPP.ErrorComponentMessage = Überprüfen Sie, ob eine andere Komponente des Bereichs nicht bereits denselben Namen hat!
+JSPP.ErrorComponentUpdate = Fehler bei der \u00C4nderung der Komponente
+JSPP.ErrorComponentMessage = \u00DCberpr\u00FCfen Sie, ob eine andere Komponente des Bereichs nicht bereits denselben Namen hat!
 JSPP.ErrorSpaceCreation = Fehler bei der Erstellung des Bereichs
-JSPP.ErrorSpaceUpdate = Fehler bei der Änderung des Bereichs
-JSPP.ErrorSpaceMessage = Überprüfen Sie, ob ein anderer Bereich derselben Ebene nicht bereits denselben Namen hat!
+JSPP.ErrorSpaceUpdate = Fehler bei der \u00C4nderung des Bereichs
+JSPP.ErrorSpaceMessage = \u00DCberpr\u00FCfen Sie, ob ein anderer Bereich derselben Ebene nicht bereits denselben Namen hat!
 
 //Corbeille
-JSPP.Bin = Räume- und Komponenten-Korb
-JSPP.BinRemoveDate = Löschdatum
+JSPP.Bin = R\u00E4ume- und Komponenten-Korb
+JSPP.BinRemoveDate = L\u00F6schdatum
 JSPP.BinRestore = Wiederherstellen
-JSPP.BinRestoreSelected = Sind Sie sicher, die gewählten Elemente wiederherstellen zu wollen?
-JSPP.BinDelete = Definitiv löschen
+JSPP.BinRestoreSelected = Sind Sie sicher, die gew\u00E4hlten Elemente wiederherstellen zu wollen?
+JSPP.BinDelete = Definitiv l\u00F6schen
 JSPP.BinEmpty = Der Korb ist leer!
-JSPP.BinDeleteConfirm = Sind Sie sicher, dieses Element und seinen gesamten Inhalt definitiv löschen zu wollen?
-JSPP.BinDeleteConfirmSelected = Sind Sie sicher, die gewählten Elemente und ihren gesamten Inhalt definitiv löschen zu wollen?
+JSPP.BinDeleteConfirm = Sind Sie sicher, dieses Element und seinen gesamten Inhalt definitiv l\u00F6schen zu wollen?
+JSPP.BinDeleteConfirmSelected = Sind Sie sicher, die gew\u00E4hlten Elemente und ihren gesamten Inhalt definitiv l\u00F6schen zu wollen?
 
-JSPP.publicComponent = Öffentlicher Zugang
+JSPP.publicComponent = \u00D6ffentlicher Zugang
 JSPP.hiddenComponent = Unsichtabr
 JSPP.inheritanceBlockedComponent = Erbe der Rechte
 JSPP.localRights = Spezifische Rechte
 JSPP.inheritedRights = Ererbte Rechte
 
-JSPP.inheritanceSpaceNotUsed = Dieser Sekondärbereich erbt nicht die Rechte des Bereichs.
+JSPP.inheritanceSpaceNotUsed = Dieser Sekond\u00E4rbereich erbt nicht die Rechte des Bereichs.
 JSPP.inheritanceComponentNotUsed = Dieses Komponent erbt nicht die Rechte des Bereichs.
-JSPP.inheritanceSpaceUsed = Dieser Sekondärbereich erbt die Rechte des Bereichs.
+JSPP.inheritanceSpaceUsed = Dieser Sekond\u00E4rbereich erbt die Rechte des Bereichs.
 JSPP.inheritanceComponentUsed = Dieses Komponent erbt die Rechte des Bereichs.
 JSPP.click = Hier
 JSPP.here = anclicken
