--- a/config-core/src/main/config/properties/com/silverpeas/mylinks/multilang/myLinksBundle_de.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/mylinks/multilang/myLinksBundle_de.properties
@@ -25,13 +25,13 @@
 myLinks.links = Meine Favoriten-Links
 myLinks.linksByComponent = Links der Komponente
 myLinks.createLink = > Einen Favoriten-Link erstellen
-myLinks.updateLink = > Einen Favoriten-Link ändern
-myLinks.addLink = Einen Link hinzufügen
+myLinks.updateLink = > Einen Favoriten-Link \u00E4ndern
+myLinks.addLink = Einen Link hinzuf\u00FCgen
 myLinks.visible = Auf der Startseite sichtbar
 myLinks.url = URL
-myLinks.popup = In einem neuen Fenster öffnen
+myLinks.popup = In einem neuen Fenster \u00F6ffnen
 myLinks.operation = Operationen
-myLinks.deleteLinks = Gewählte Links löschen
-myLinks.deleteSelection = Sind Sie sicher, diese Auswahl löschen zu wollen? 
-myLinks.messageConfirm = Der Link ist zu Ihren Favoriten hinzugefügt worden
-myLinks.retour = Zurück zur Komponente
+myLinks.deleteLinks = Gew\u00E4hlte Links l\u00F6schen
+myLinks.deleteSelection = Sind Sie sicher, diese Auswahl l\u00F6schen zu wollen?
+myLinks.messageConfirm = Der Link ist zu Ihren Favoriten hinzugef\u00FCgt worden
+myLinks.retour = Zur\u00FCck zur Komponente
