--- a/config-core/src/main/config/properties/com/silverpeas/pdcSubscriptionPeas/multilang/pdcSubscriptionBundle_de.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/pdcSubscriptionPeas/multilang/pdcSubscriptionBundle_de.properties
@@ -31,10 +31,10 @@ NameExists = Dieser Name wird bereits verwendet. Wollen Sie weiterfahren?
 name  = Name
 value = Wert
 AddSC = Einen Interessenschwerpunkt erstellen
-DeleteSC = Löschen
-EditSC = Ändern
+DeleteSC = L\u00F6schen
+EditSC = \u00C4ndern
 
-confirmDeleteSubscription = Sind Sie sicher, die Auswahl löschen zu wollen?
+confirmDeleteSubscription = Sind Sie sicher, die Auswahl l\u00F6schen zu wollen?
 Path = Meine Abonnemente
 
 Operations = Operationen
