--- a/config-core/src/main/config/properties/com/silverpeas/thesaurusPeas/multilang/thesaurusPeasBundle_de.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/thesaurusPeas/multilang/thesaurusPeasBundle_de.properties
@@ -28,17 +28,17 @@ thesaurus.synonyms = Synonyme
 thesaurus.synonyme = Synonym
 
 thesaurus.OPcreateVoc = Ein Vokabular erstellen
-thesaurus.OPeditVoc = Kopf des Vokabulars ändern
-thesaurus.OPdeleteVoc = Das Vokabular löschen
-thesaurus.OPdeleteVoc2 = Löschen
+thesaurus.OPeditVoc = Kopf des Vokabulars \u00E4ndern
+thesaurus.OPdeleteVoc = Das Vokabular l\u00F6schen
+thesaurus.OPdeleteVoc2 = L\u00F6schen
 thesaurus.OPmanageSyn = Synoinyme bearbeiten
 thesaurus.OPaffectVoc_to_users = Benutzer anzeigen
 thesaurus.OPaffectVoc = Ein Vokabular zuweisen
 thesaurus.OPmanageAffectations = Benutzern ein Vokabular zuweisen
-thesaurus.OPeditSyn = Die Synonyme ändern
-thesaurus.OPdeleteSyn = Die gewählten Synonyme löschen
+thesaurus.OPeditSyn = Die Synonyme \u00E4ndern
+thesaurus.OPdeleteSyn = Die gew\u00E4hlten Synonyme l\u00F6schen
 thesaurus.OPuserPanel = Benutzer-Panel
-thesaurus.validateSynonyms = Synonyme bestätigen
+thesaurus.validateSynonyms = Synonyme best\u00E4tigen
 
 thesaurus.vocabulaires = Vokabulare
 thesaurus.vocabulaire = Vokabular
@@ -49,7 +49,7 @@ thesaurus.terme = Begriff
 
 
 thesaurus.BBcreateVoc = Neu
-thesaurus.BBeditVoc = Änderung
+thesaurus.BBeditVoc = \u00C4nderung
 thesaurus.BBmanageSyn = Bearbeitung
 thesaurus.BBeditSyn = Synonym-Liste
 thesaurus.BBlistAffectations = Benutzer von 
@@ -79,17 +79,17 @@ thesaurus.none = kein
 
 //erreurs
 thesaurus.mustContainsText = muss eingegeben werden
-thesaurus.thisFormContains = Achtung, dieses Formular enthält 
-thesaurus.containsTooLargeText = darf nicht übersteigen 
+thesaurus.thisFormContains = Achtung, dieses Formular enth\u00E4lt
+thesaurus.containsTooLargeText = darf nicht \u00FCbersteigen
 thesaurus.nbMaxTextArea = 2000 
 thesaurus.characters = Zeichen
 thesaurus.show = Siehe die Begriffe
 
 //messages d'avertissement
-thesaurus.MessageSuppressionSelectedVoca = Sind Sie sicher, das gewählte Vokabulkar löschen zu wollen?
-thesaurus.MessageSuppressionVoca = Sind Sie sicher, dieses Vokabular löschen zu wollen?
-thesaurus.MessageSuppressionsSyno = Sind Sie sicher, die gewählten Synonyme löschen zu wollen?
-thesaurus.MessageSelectVoca = Wählen Sie bitte ein Vokabular
-thesaurus.MessageSelectTerm = Wählen Sie bitte einen Begriff
-thesaurus.MessageSelectVocaTerm = Wählen Sie bitte ein Vokabular und einen Begriff
-thesaurus.MessageSelectAxis = Wählen Sie bitte eine Achse
+thesaurus.MessageSuppressionSelectedVoca = Sind Sie sicher, das gew\u00E4hlte Vokabulkar l\u00F6schen zu wollen?
+thesaurus.MessageSuppressionVoca = Sind Sie sicher, dieses Vokabular l\u00F6schen zu wollen?
+thesaurus.MessageSuppressionsSyno = Sind Sie sicher, die gew\u00E4hlten Synonyme l\u00F6schen zu wollen?
+thesaurus.MessageSelectVoca = W\u00E4hlen Sie bitte ein Vokabular
+thesaurus.MessageSelectTerm = W\u00E4hlen Sie bitte einen Begriff
+thesaurus.MessageSelectVocaTerm = W\u00E4hlen Sie bitte ein Vokabular und einen Begriff
+thesaurus.MessageSelectAxis = W\u00E4hlen Sie bitte eine Achse
