--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/silverStatisticsPeas/multilang/silverStatisticsBundle_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/silverStatisticsPeas/multilang/silverStatisticsBundle_de.properties
@@ -26,7 +26,7 @@ silverStatisticsPeas.ip                          = IP-Adresse
 silverStatisticsPeas.duration                    = Dauer
 silverStatisticsPeas.organisation                = Organisation
 silverStatisticsPeas.group                       = Gruppe
-silverStatisticsPeas.conseilTXT 		 = Um im Textformat (z.B. CSV) zu speichern, die Funktion 'Speichern unter...' im Menü Datei mit Text als Typ verwenden.
+silverStatisticsPeas.conseilTXT 		 = Um im Textformat (z.B. CSV) zu speichern, die Funktion 'Speichern unter...' im Men\u00FC Datei mit Text als Typ verwenden.
 silverStatisticsPeas.since                       = Ab Anfang
 silverStatisticsPeas.to                          = Bis Ende
 silverStatisticsPeas.filter                      = Filter
@@ -38,12 +38,12 @@ silverStatisticsPeas.RefreshedEveryMinutes       = Alle Minuten aktualisierte Li
 silverStatisticsPeas.CloseSession                = Sitzung schliessen
 silverStatisticsPeas.NotifyUser                  = Den Benutzer durch Popup benachrichtigen
 silverStatisticsPeas.Actions                     = Aktionen
-silverStatisticsPeas.ConfirmKickSession          = Bestätigen Sie die Löschung der Sitzung des Benutzers:
+silverStatisticsPeas.ConfirmKickSession          = Best\u00E4tigen Sie die L\u00F6schung der Sitzung des Benutzers:
 silverStatisticsPeas.durationAvg                 = Mittlere Dauer
 silverStatisticsPeas.usersWithSession		 = Angeschlossene Benutzer
 silverStatisticsPeas.notifyAllUser		 = Alle angeschlossenen Benutzer benachrichtigen
 silverStatisticsPeas.AuthorMessage		 = Meldung 
-silverStatisticsPeas.connectionFrequence         = Verbindungshäufigkeit
+silverStatisticsPeas.connectionFrequence         = Verbindungsh\u00E4ufigkeit
 silverStatisticsPeas.ConnectionNumberOfDistinctUsers = Anzahl der verschiedenen angeschlossenen Benutzer
 silverStatisticsPeas.Connections 		 = Verbindungen
 silverStatisticsPeas.LoginNumber 		 = Anzahl Verbindungen
@@ -55,12 +55,12 @@ silverStatisticsPeas.InstancesNumber	 	 = Anzahl Instanzen
 silverStatisticsPeas.VolumeNumber	 	 = Verteilung der Publikationen
 silverStatisticsPeas.VolumeDocsNumber	 	 = Verteilung der Dateien
 silverStatisticsPeas.FromSpace	 	 	 = des Bereichs
-silverStatisticsPeas.AttachmentsNumber	 	 = Anzahl der beigefügten Dateien
-silverStatisticsPeas.AttachmentsSize	 	 = Grösse der beigefügten Dateien
-silverStatisticsPeas.VolumeDocsSize	 	 = Von den beigefügten Dateien eingenommene Grösse
-silverStatisticsPeas.Frequence	 	 	 = Häufigkeits-Art
-silverStatisticsPeas.AttachmentsTotalSize	 = Entwicklung der Grösse der beigefügten Dateien
-silverStatisticsPeas.EvolutionAttachmentsTotalSize = Entwicklung der von den beigefügten Dateien eingenommene Grösse
+silverStatisticsPeas.AttachmentsNumber	 	 = Anzahl der beigef\u00FCgten Dateien
+silverStatisticsPeas.AttachmentsSize	 	 = Gr\u00F6sse der beigef\u00FCgten Dateien
+silverStatisticsPeas.VolumeDocsSize	 	 = Von den beigef\u00FCgten Dateien eingenommene Gr\u00F6sse
+silverStatisticsPeas.Frequence	 	 	 = H\u00E4ufigkeits-Art
+silverStatisticsPeas.AttachmentsTotalSize	 = Entwicklung der Gr\u00F6sse der beigef\u00FCgten Dateien
+silverStatisticsPeas.EvolutionAttachmentsTotalSize = Entwicklung der von den beigef\u00FCgten Dateien eingenommene Gr\u00F6sse
 silverStatisticsPeas.Historique                  = Vorgeschichte
 silverStatisticsPeas.Access                  	 = Zugriff
 silverStatisticsPeas.EvolutionAccessDeb 	 = Vorgeschichte der Zugriffe
@@ -68,12 +68,12 @@ silverStatisticsPeas.EvolutionAccessSpace 	 = zum Bereich
 silverStatisticsPeas.EvolutionAccessService 	 = zum Dienst
 silverStatisticsPeas.EvolutionAccessGroup 	 = der Gruppe
 silverStatisticsPeas.EvolutionAccessUser 	 = des Benutzers
-silverStatisticsPeas.ClearUserPanelPeas 	 = Filter Löschen
+silverStatisticsPeas.ClearUserPanelPeas 	 = Filter L\u00F6schen
 silverStatisticsPeas.GraphConnections 	 	 = Grafik
-silverStatisticsPeas.For	 	 	 = für
+silverStatisticsPeas.For	 	 	 = f\u00FCr
 silverStatisticsPeas.January	 	 	 = Jan.
 silverStatisticsPeas.February	 	 	 = Feb.
-silverStatisticsPeas.March	 	 	 = März
+silverStatisticsPeas.March	 	 	 = M\u00E4rz
 silverStatisticsPeas.April	 	 	 = Apr.
 silverStatisticsPeas.May	 	 	 = Mai
 silverStatisticsPeas.June	 	 	 = Juni
