--- a/config-core/src/main/config/properties/com/stratelia/webactiv/homePage/multilang/homePageBundle_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/homePage/multilang/homePageBundle_de.properties
@@ -32,12 +32,12 @@ AdministrationStat = Statistiken
 
 SpaceEntreprise = Unternehmens-Bereich
 SpaceCollaboration = Kollaborative Bereiche
-SpacePersonal = Persönlicher Bereich
+SpacePersonal = Pers\u00F6nlicher Bereich
 Component = Dienst
 AxisCollaboration = Kategorien von
 AxisEmpty = kein PDC
 
-Choose = Wählen Sie...
+Choose = W\u00E4hlen Sie...
 FavRequests = Meine Favoriten-Anforderungen
 FavLinks = Meine Favoriten-Links
 Directory = Verzeichnis
@@ -48,7 +48,7 @@ Workflow = Arbeitsablauf
 NotifyUser = Benachrichtigen
 NotificationBox = Meine Benachrichtigungen lesen
 MyInterestCenters = Meine Abonnemente
-LatestPublications = Die * letzten Veröffentlichungen
+LatestPublications = Die * letzten Ver\u00F6ffentlichungen
 QuickInfos = QuickInfos
 
 HelpLaunchIE = Hilfe zum Starten der Tools
@@ -80,7 +80,7 @@ ThinkTo = Denken an
 NoTodos = Keine Task programmiert!
 MyFavorites = Meine Favoriten
 NoFavorites = Kein Favorit festgelegt!
-MyNextEvent = Meine nächsten Rendezvous
+MyNextEvent = Meine n\u00E4chsten Rendezvous
 today = Heute
 tomorrow = Morgen
 MyAttachment = Meine reservierten Dateien
@@ -93,14 +93,14 @@ ErrorDB = Fehler mit der Datenbank!
 ErrorEJBFinder = Angegebenes Objekt kann nicht gefunden werden!
 ErrorEJBCreation = Problem bei der EJB-Erstellung!
 ErrorObjectNotFound = Das Element, das Sie erreichen wollen, gibt es nicht mehr!
-ErrorObjectManipulation = Das Element, das Sie handhaben wollen, ist konkurrierend geändert worden, allfällige von Ihnen angebrachte Änderungen wurden nicht gespeichert!
+ErrorObjectManipulation = Das Element, das Sie handhaben wollen, ist konkurrierend ge\u00E4ndert worden, allf\u00E4llige von Ihnen angebrachte \u00C4nderungen wurden nicht gespeichert!
 ErrorUnknown = Unerwartetes Problem aufgetreten!
 Error = Ein Fehler ist aufgetreten
-RequestUncomplete = Ihre Anfrage kann nicht erfüllt werden.
+RequestUncomplete = Ihre Anfrage kann nicht erf\u00FCllt werden.
 ErrorTransmitAdmin = Leiten Sie diese Fehlermeldung an Ihren Administrator weiter.
 Thanks = Danke.
-BackToMainPage = Zurück zur Hauptseite
-BackToMainPageSpace = Zurück zur Haupseite des Bereichs
+BackToMainPage = Zur\u00FCck zur Hauptseite
+BackToMainPageSpace = Zur\u00FCck zur Haupseite des Bereichs
 
 
 navigationView = Browsen
@@ -110,7 +110,7 @@ bySpace = Pro Bereich
 reductExtend = Reduzieren / Ausweiten
 
 homePage.feedback = Dem Administrator schreiben
-homePage.loginBack = Zurück zur Identifikationsseite
+homePage.loginBack = Zur\u00FCck zur Identifikationsseite
 homePage.maintenanceOn = Ihre Anwendung wird momentan gewartet.
 homePage.spaceMaintenanceOn = Der Bereich wird momentan gewartet.
 
@@ -121,7 +121,7 @@ notification.source = Quelle
 notification.from = Von
 notification.url = URL
 notification.subject = Gegenstand
-BackToPersonalMainPage = Empfang des persönlichen Bereichs
+BackToPersonalMainPage = Empfang des pers\u00F6nlichen Bereichs
 
 # Login Page
 storePassword = Passwort speichern?
