--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_de.properties
@@ -138,8 +138,8 @@ GML.print						= Drucken
 GML.priority 						= Priorit&auml;t
 GML.privateFS 						= Private
 GML.privateMS 						= Privater
-GML.publication						= Veröffentlichung
-GML.publications					= Veröffentlichungen
+GML.publication						= Ver\u00F6ffentlichung
+GML.publications					= Ver\u00F6ffentlichungen
 GML.publish						= Ver&ouml;ffentlichen
 
 GML.restore						= Wiederherstellen
@@ -220,7 +220,7 @@ GML.mois9 = Oktober
 GML.mois10 = November
 GML.mois11 = Dezember
 
-//Contrôle JavaScript
+//Contr\u00F4le JavaScript
 GML.ThisFormContains = Dieses Fomular enth&auml;lt 
 GML.MustBeFilled = muss ausgef&uuml;llt werden
 GML.MustContainsNumber = muss eine Ganzzahl enthalten
@@ -239,7 +239,7 @@ GML.PDCParam = Die Verwendung der PDC parametrisieren
 GML.PDCNewPosition = Eine neue Position erstellen
 GML.PDCDeletePosition = Die gew&auml;hlten Positionen l&ouml;schen
 
-//Contrôles d'accès
+//Contr\u00F4les d'acc\u00E8s
 GML.ForbiddenAccessContent = Sie verf&uuml;gen nicht &uuml;ber gen&uuml;gende Rechte, um zur gew&uuml;nschten Information Zugang zu erhalten!
 GML.DocumentNotFound = Die Information, die Sie abfragen m&ouml;chten, existiert nicht mehr!
 
@@ -262,7 +262,7 @@ GML.errorCsvFile = Fehler! Mann kann nur Dateien hochladen, die die der Erweiter
 //Export CSV
 GML.ExportSucceeded = Export erfolgreich.
 GML.ExportFailed = Der Export ist fehlgeschlagen.
-GML.ExportInProgress = Export läuft ...
+GML.ExportInProgress = Export l\u00E4uft ...
 
 GML.DragNDropExpand = Um eine Datei schnell abzulegen...
 GML.DragNDropCollapse = Schliessen
